🎉auto update by Gmeek action

--- a/backup/英耀篇.md
+++ b/backup/英耀篇.md
@@ -1,34 +1,62 @@
 ## 简介
 
-英耀赋或英耀篇是江湖术士看相的口诀。
+《英耀赋》或《英耀篇》是中国古代江湖术士使用的一种相术口诀。这种相术不依赖于八字测算或风水观察，而是完全依靠观察者的眼力和对被观察者一举一动的细致观察。例如，通过言谈、神情、习惯动作等细节，相术士能够洞察对方的底细和事情背后隐藏的玄机。"英"在这里指的是神，"耀"指的是捉，因此"英耀"实际上是指捕捉和运用神髓，这是江湖术士看相的核心技巧。
 
-中国古代有一种“相术”，不测八字，不看风水，全凭眼力，只通过观察对方的一举一动，如言谈、神情、习惯动作等，就能摸出对方的底细。这门相术，就是《英耀赋》，它教人如何透过观察对方的各种细节，洞察事情背后隐藏的玄机。“英”是神，“耀”是捉，故此，“英耀”其实等于捉用神，江湖术士看相的首要伎俩，就是捉用神也。
+《英耀篇》的原文包含了许多关于如何通过观察和交流来判断一个人性格、命运和心意的具体指导。例如，它教导术士在与人交谈时要注意对方的言辞和态度，如何通过对方的言行来推测其性格和近期的运势等。
+
+这种相术在古代可能被用于算命或心理战术，但现代来看，它更多地被视为一种古代文化现象，而不是实际的预测工具。
+《英耀赋》作为古代相术的一部分，其原始形式可能已经不再被广泛使用。然而，相术作为一种文化现象，其影响可能仍然存在于现代的一些算命、心理咨询或人际交往的实践中。现代的这些实践可能借鉴了《英耀赋》中的一些基本原则，比如观察人的言行举止来推断其性格或心理状态。
+
+现代心理学可能会将《英耀赋》中的技巧视为一种早期的行为观察和人际交往分析。虽然《英耀赋》的技巧并非建立在科学原理之上，但它们确实涉及了对人类行为的一些基本观察，这些观察在一定程度上与现代心理学中的一些概念相似。
+例如，现代心理学中的行为主义学派强调可观察行为的重要性，这与《英耀赋》中通过观察人的外在行为来推断其内在特质的方法有相似之处。此外，一些心理学的领域，如身体语言、非言语交流、微表情分析等，也涉及到通过观察人的非言语行为来推断其情感和心理状态。
+
+然而，现代心理学更注重实证研究和可重复验证的实验结果，而《英耀赋》的技巧往往是基于个人经验和直觉，缺乏科学验证。因此，虽然《英耀赋》中的一些观察可能与现代心理学的一些观点不谋而合，但它们在方法论和验证标准上存在着根本的差异。
+
+总的来说，现代心理学可能会对《英耀赋》中的技巧持一种批判性的态度，同时也会承认其中包含的一些对人类行为的基本洞察。现代心理学家可能会尝试从科学的角度理解和解释这些技巧，而不是直接采纳它们作为实践指导。
+
+《英耀篇》的智慧跨越了时间的界限，与现代心理学的理论和实践相结合，为我们在个人发展、社会交往、教育、领导、冲突解决、健康和社会责任等多个领域提供了深刻的洞见和实用的指导。通过这些原则和技巧的应用，我们不仅能够更好地理解自己和他人，还能够更有效地参与到社会和组织的建设与发展中，为实现个人与集体的和谐与进步做出贡献。
 
 ## 原文 与 解析
 
 ### 原文
 
-> 入门先观来意，既开言切莫踌躇，天来问追欲追贵，追来问天为天忧。
+> 入门先观来意，既开言切莫踌躇。
 > 
-> 八问追，喜者欲凭子贵，怨者实为生孙近古。
+> 天来问追欲追贵，追来问天为天忧。
+> 
+> 八问七，喜者欲凭七贵，怨者实为七愁。
+> 
+> 七问八，非八有事，定然子息艰难。
+> 
+> 士子问前程，生孙为近古。
 > 
 > 叠叠问此件，定然此件缺，频频问原因，其中定有因。
 > 
-> 一片真诚，百说慕名求教，此人乃是一哥，笑问看我贱相如何？此人若非火底就是畜生。
+> 一片真诚，自说慕名求教，此人乃是一哥，笑问看我贱相如何？此人若非火底，即是畜生。
 
 ### 解析
 
 相士在开始相面之前，首先要观察对方的来意和心态。一旦开始对话，就要果断，不要犹豫。如果对方显得急躁不安，可能是在追求财富或地位；如果对方显得忧虑，可能是心中有烦恼。观察对方的来意和心态是一种非言语沟通的分析，与心理学中的“情境分析”相似，强调了对个体行为背后动机的解读。在客户服务和销售中，通过观察客户的行为和语言来预判需求，从而提供个性化服务。
 
-如果对方多次追问同一问题，说明这个问题对他/她很重要。如果对方态度喜悦，可能是因为他/她希望子女能够显贵；如果对方态度怨恨，可能是因为家族中近亲的问题。
+父母来问子女，必然是希望子女未来富贵，希望未来可以凭子贵。子女来问父母，必然是为父母担忧，父母可能现在身体不好。
+
+妻子问丈夫，面色喜悦的，是希望凭借丈夫的贵族身份，面露愁容的，是在为丈夫最近的表现忧愁。
+
+丈夫问妻子，要么妻子有事，要么就是生孩子困难。
+
+读书人来问命算卦，多半是为了功名前程，希望有飞黄腾达之日，光宗耀祖之时；商人来问卜，则因为近来生意不好的缘故。
 
 如果对方反复询问某件事情，说明在这件事情上他/她有所缺失或不满意；如果对方不断追问原因，说明他/她内心深处有困扰。
 
-如果对方表现出真诚的态度，多次表示仰慕并求教，那么这个人可能是一个有地位的人；如果他/她笑着询问自己的面相如何，那么他/她可能是一个性格直率的人；如果态度恶劣，那么他/她可能是一个性格暴躁的人。
+如果对方表现出真诚的态度，称自己是慕名前来求教，那么这个人可能是信神信命信卦的“一哥”——即虔诚的问卜求卦者；如果他/她笑着询问自己的面相如何，那么他/她可能是一个性格直率的人；如果态度恶劣，那么他/她可能是一个性格暴躁的人。
 
 ### 原文
 
-> 砂砾丛中辨金石，衣冠队内别鱼龙，僧道纵清高不忘利欲，庙廊之士志在山林，初贵者志极高超，久困者志无远大，聪明之子家业常寒，百拙之夫财终不匮。
+> 砂砾丛中辨金石，衣冠队内别鱼龙。
+> 
+> 僧道纵清高不忘利欲，庙廊之士志在山林。
+> 
+> **初贵者志极高超，久困者志无远大，聪明之子家业常寒，百拙之夫财终不匮。**
 > 
 > 眉精眼锐，白手兴家之人，碌碌无能，终生工水之辈。
 > 
@@ -36,19 +64,27 @@
 > 
 > 神暗额光，不是孤孀亦弃妇，妖婆媚笑，倘非花底定宠姬。
 > 
-> 满口好对好，久居高位，连声是是是，出身卑微。
+> **满口好对好，久居高位，连声是是是，出身卑微。**
 
 ### 解析
 
-相士应该具备辨别真伪的能力，就像在砂砾中辨识金石一样。在人群中，要能区分谁是贤才谁是庸才。即使是出家人也可能有欲望，而那些看似有志于山林的人可能实际上志在庙堂。初显贵的人志向通常很高，而长期受困的人则可能志向不远大。聪明人的家业可能并不富裕，而看似笨拙的人却可能财富不断。辨别真伪的能力与心理学中的“判断与决策”相关，涉及到个体如何基于有限信息做出准确判断。在人力资源管理中，通过行为面试和心理测评来辨别候选人的真实能力和潜力。
+相士应该具备辨别真伪的能力，就像在砂砾中辨识金石一样，在人群中，要能区分谁是贤才谁是庸才。
+
+即使是出家人也可能有欲望，而那些看似有志于山林的人可能实际上志在庙堂。
+
+**初显贵的人志向通常很高，而长期受困的人则可能志向不远大。聪明人的家业可能并不富裕，而看似笨拙的人却可能财富不断。刚刚开始发家的人喜欢炫耀自己的财富，注重物质享受。个体在经历贫困后，一旦获得财富，可能会过度强调物质展示。心理学中的“补偿心理”和“社会认同”概念可以解释这种行为，即个体可能会通过物质展示来弥补过去的不足或寻求社会认同。**
 
 面相眉毛整齐、眼睛有神，通常表示此人精明能干，从无到有，未来可能靠自己的努力创业成功。面相平凡无奇，通常表示此人没有特殊才能，未来可能一生劳碌，像水一样奔波劳碌。
 
-家境贫寒的人即使家境贫寒，也注重自己的仪表，不放弃对生活的追求。刚刚开始发家的人喜欢炫耀自己的财富，注重物质享受。个体在经历贫困后，一旦获得财富，可能会过度强调物质展示。心理学中的“补偿心理”和“社会认同”概念可以解释这种行为，即个体可能会通过物质展示来弥补过去的不足或寻求社会认同。
+破落户的特征是：白嫩肉，精神憔悴，衣饰寒酸，仍然穿鞋套袜不打赤脚，现代社会或可能是衣着毕挺，行为做作，腰上皮带是破旧的，脖上领带是皱褶的，脚上皮鞋是破旧或没擦的，领口衬衫是花的，鼻上眼镜片是脏的，腕上的手表是廉价的。
 
-眼神暗淡、额头明亮，通常表示此人内心孤独或有所忧虑，此人可能是失去丈夫的寡妇或是被丈夫抛弃的妇女。一个人面容憔悴或表情忧郁，可能与心理健康状态有关。心理学中的“抑郁症”和“焦虑症”等情绪障碍可能会导致个体的面部表情和神态发生变化。笑容妩媚，像妖婆一样迷人，如果不是因为身处风月场所，那么此人很可能是被某个有权势的男人宠爱的小妾。
+那些新发迹的富人特征是：尽管穿着平常如旧，但是喜欢炫耀自己新买来的金玉饰物，人一阔，脸就变，现代社会还有可能是手里捏个大哥大，动辄“喂喂喂”叫个不停，生怕人家不知道他有手机……不管何种表现，总之有意无意地“炫耀”是其特征。
 
-总是在同意或赞许，可能是身份地位很高的人，总是在随声附和，没有自己的主见，可能是较低的社会阶层或贫苦家庭出身。
+眼神暗淡、额头明亮，通常表示此人内心孤独或有所忧虑，此人可能是失去丈夫的寡妇或是被丈夫抛弃的妇女。一个人面容憔悴或表情忧郁，可能与心理健康状态有关。心理学中的“抑郁症”和“焦虑症”等情绪障碍可能会导致个体的面部表情和神态发生变化。
+
+笑容妩媚，像妖婆一样迷人，如果不是因为身处风月场所，那么此人很可能是被某个有权势的男人宠爱的小妾。
+
+**总是在同意或赞许，可能是身份地位很高的人，总是在随声附和，没有自己的主见，可能是较低的社会阶层或贫苦家庭出身。**
 
 ### 原文
 
@@ -62,11 +98,25 @@
 
 ### 解析
 
-如果一个人表面上带着笑容，但眼神游移不定，可能是因为家中发生了争执或不幸。如果一个人眼神闪烁，却故作镇定，可能是因为他/她自己遇到了麻烦。表面的情绪表达与内心状态的不一致，与心理学中的“情绪不协调”概念相符，可能涉及深层的情绪问题。在心理咨询中，帮助个体识别和处理内心的真实情绪，以改善心理健康。
+如果一个人表面上带着笑容，但眼神游移不定，可能是因为家中发生了争执或不幸。
 
-性格好斗、容易冲动的人，容易因为冲突而遭受意外的灾祸。性格怯懦、缺乏能力的人，他们往往因为软弱而被人欺负。心理学认为，缺乏自信和自尊的人可能会散发出易受攻击的信号，从而吸引到那些喜欢操控和欺负他人的人。
+如果一个人眼神闪烁，却故作镇定，可能是因为他/她自己遇到了麻烦。
 
-志向很大但才能不足的人，一生都会处于不满和遗憾之中。心理学上，这种状态可能指的是理想自我与现实自我之间的差距过大，导致个人长期处于挫败感和焦虑中。才华出众但性格固执的人，即使没有遇到大灾难，也会过着非常艰难的生活。心理学认为，固执的性格可能会使人忽视适应环境和变通的重要性，导致生活陷入困境。
+表面的情绪表达与内心状态的不一致，与心理学中的“情绪不协调”概念相符，可能涉及深层的情绪问题。在心理咨询中，帮助个体识别和处理内心的真实情绪，以改善心理健康。
+
+性格好斗、容易冲动的人，容易因为冲突而遭受意外的灾祸。
+
+性格怯懦、缺乏能力的人，他们往往因为软弱而被人欺负。
+
+心理学认为，缺乏自信和自尊的人可能会散发出易受攻击的信号，从而吸引到那些喜欢操控和欺负他人的人。
+
+志向很大但才能不足的人，一生都会处于不满和遗憾之中。
+
+心理学上，这种状态可能指的是理想自我与现实自我之间的差距过大，导致个人长期处于挫败感和焦虑中。
+
+才华出众但性格固执的人，即使没有遇到大灾难，也会过着非常艰难的生活。
+
+心理学认为，固执的性格可能会使人忽视适应环境和变通的重要性，导致生活陷入困境。
 
 在不同的时代，人们的价值和成就也不同。在和平时期，重视文学才能的官员更受欢迎；而在乱世，那些出身草莽的英雄人物则有机会崭露头角。在不同地方人们的生活方式和竞争内容。在商业发达的大城市，人们竞争的是工商业的成就；而在偏远的乡村，人们则可能为了土地和林业资源而争斗。
 
@@ -78,17 +128,25 @@
 > 
 > 一敲即应，不妨打蛇随棍上，再敲不吐，何仿拨草寻蛇。
 > 
-> 先千后隆，无往不利，有千无隆，帝寿之材，故曰无千不响，无隆不成。
+> **先千后隆，无往不利，有千无隆，帝寿之材，故曰无千不响，无隆不成。**
 > 
 > 学者可执其端，而理其绪，举一隅而知三隅，随机应变，鬼神莫测，分寸己定，任意纵横，慎重传人，不出帝寿，斯篇玩熟，定教四海扬名。
 
 ### 解析
 
-在交流中应该注意节奏和力度，有时候需要快速直接地表达观点，有时候则需要耐心细致地引导对方。同时，交流应该力度适中，既能够引起对方的注意，又不至于过分干涉。根据情况灵活运用不同的策略，既要会高调展示，也要会细心观察。十次细心观察中可能有九次能引起对方的响应，而十次高调展示则可能有十次能够成功。交流的节奏和力度的控制与心理学中的“沟通技巧”有关，强调了在沟通中适时调整策略的重要性。在谈判和说服技巧中，通过调整语速、语调和内容来影响听众的反应和决策。
+“急打慢千”是相命时的基本要领，就是说给人算命时，必须瞅准时机，突然发问，击中要害，陷对方于猝不及防的境地，使对方在仓促时间忘记来时的戒备心理而透露出真情实况。所谓“急打”，要有突发性，打对方一个措手不及，使其无暇自顾，从而瓦解他的心理防线，如此，不愁他不从实招来。所谓“慢千”，就是在获悉对方的“情报”后，要运用恐吓的手段，再给对方以强烈的刺激，使他惊诧、惧怕，担心有大祸临头之感。这样，他自然会求教于你，向你讨教消灾避祸的法术。算命中，对方的担心和忧虑是最好的诱饵，有了这种意思，你就可以牵着他的鼻子悠哉悠哉了。为什么“千”要慢呢？因为你要组织有条理有递进感的一套“军马”（即语言），来打击对方，语调必须做到平稳而有力，切忌急躁和语无伦次，一字一句一板一眼慢慢吐出，威严，阴森可怖，掷地有声，震慑对方的意志，粉碎他的抵抗。
+
+“轻敲而响卖”，就是说，在套取对方的情况时，要采取旁敲侧击的手法，不能直敲直槌，敲错地方。一敲就要敲到与对方心事有关联之处，起到敲山震虎的功效，使“虎”叫啸起来，自我暴露隐藏在深处的目标。“响卖”就是经“敲”又揣摩到对方的底细线索后，顺藤摸瓜，以肯定的语气把底牌亮出来，端出已见，使对方大为惊异并且深深地佩服你的高明。所谓“响”，就是一经探明路数，就要毫不犹豫，果断地出击直点对方的“穴位”，牢牢地抓住对方，在对方心中树立你的信念和权威感，由此，你可以左右逢源，条条道路通罗马了。“卖”，也是一种打击，是更深一层的刺激。然而，仅仅有打击和刺激，是不行的，还必须配之以“隆”，就是奉承恭维，夸赞和鼓励，给对方以希望，使他相信时来运转可以消为避祸之说，一切不幸均可化解；使他相信厄运之下，他仍是富贵命，幸运将降福于他。这一点很要紧，一个直到算命终场仍然一脸沮丧的人是不肯把更多的钱交给相命先生的。所以“卖”和“隆”要结合起来加以实施，单有卖，会把对方吓跑。你越是给他看到吉祥如意之光环，他越会乖乖地听你的“调遣”。算命结束，两者皆大欢喜，如若结局不是如此，那就失败了。同样道理，“敲打”、“审千”也必须并用不悖，缺一不可。这样自会“十千九响，十隆九成”。
+
+把求问者的各种情况都敲清了，又经过“响卖”，这时候就可以“落千”了。“千”，其意不光指“恐吓”，还有一层意思，就是击中对方的要害，抨击其最铭心刻骨之事。如指出他的不幸遭遇，是“千”，抨击世态炎凉，社会的不公，亲戚朋友的背离抛弃，也是“千”。“千”之后要“隆”，要抚慰他，要给他描绘未来。这种预言式、希望式的隆，是给对方一种心理暗示，给予其精神力量。无千就不会有好效果，因为“千”多半是说明和非难过去，“千”得准会使对方依赖你，那么你对未来的“隆”他也就不怀疑了。这就是“无千不响，无隆不成”的道理所在。
+
+“审、敲、打、千、隆、卖”要兼施并用，这实质上是一套高级的算卦骗术。具体怎么运用？江湖术士心中有数，他们或者“千、隆、卖”齐施，或者“敲、打”与“审、千”结合，或者“审、千”与“隆、卖”结合，或者只使用其中的某一字，或者六个字一齐运用。总之是灵活的，视求卦者的具体情况而决定方略法术。
+
+交流的节奏和力度的控制与心理学中的“沟通技巧”有关，强调了在沟通中适时调整策略的重要性。在谈判和说服技巧中，通过调整语速、语调和内容来影响听众的反应和决策。
 
 通过观察对方的行为，推测其内心的意图，通过了解对方的一方面，来推测其他方面。如果对方对某个话题有积极的反应，就应该趁机深入探讨，就像打蛇随棍上一样，顺着对方的反应进一步行动。如果对方对进一步的尝试没有反应，那么就应该改变策略，像拨开草丛寻找蛇一样，尝试不同的方法来引导对方。
 
-先进行细心观察，然后根据观察结果采取行动，这样做通常能够取得成功。如果只有观察而没有行动，那么这种人具有深思熟虑、稳健不冲动品质的人。没有观察，就不会有引起共鸣的可能；没有行动，就不会有成功的结果。
+**先进行恐吓，然后安抚，这样做通常能够取得成功。如果只有恐吓没有安抚，那么对方可能会认为你是在胡闹。所以说，没有恐吓不要安抚，没有安抚就无法成功诈骗。**
 
 这句话鼓励学者们深入研究，掌握事物的本质，从一个角度出发，了解更全面的情况。调了灵活性和不可预测性在人际交往和策略应对中的重要性。在掌握了分寸之后，就可以在各种情境中自由应对。在选择传承人时要非常慎重，确保他们具有深思熟虑、稳健不冲动的品质。深入研究并熟练掌握这些策略，如果能够做到这一点，就能在全世界获得名声。
 
@@ -98,35 +156,35 @@
 > 
 > 先千后隆，乃兵家之妙法。轻敲响卖，是江湖之秘宗。
 > 
-> 有问不可迟答，无言切勿先声。
+> **有问不可迟答，无言切勿先声。**
 > 
 > 谈男命，先千后隆，谈女命，先隆后千。
 > 
-> 人人后运好，个个子孙贤。
+> **人人后运好，个个子孙贤。**
 > 
 > 三五成群，须防有假。嘻呵成，必定无心。
 > 
-> 来意殷勤，前运必非好景。言词高傲，近来必定佳途。
+> **来意殷勤，前运必非好景。言词高傲，近来必定佳途。**
 
 ### 解析
 
 在与他人交往之初，首先要观察对方的意图和目的。在谈话之前，要把握对方的心理状态和需求。
 
-在与对方交涉时，先进行细心观察，再根据实际情况采取相应的措施，这是策略中的高明之处。交流不应过分干涉，但展示要高调，这是江湖中的秘密技艺。
+在与对方交涉时，先进行恐吓，再安抚，这是策略中的高明之处。旁敲侧击地获取信息，再抛出自己的观点，，这是江湖中的秘密技艺。
 
-面对他人的提问，应迅速回答，不可迟疑；若对方没有问，则不应该先发起谈论。
+**面对他人的提问，应迅速回答，不可迟疑；若对方没有问，则不应该先发起谈论。**
 
-在算命时，对男性先进行细心观察，然后根据观察结果采取行动。对女性则先进行行动，然后再细心观察。
+在算命时，对男性先进行恐吓，然后再安抚。对女性则先进行安抚，然后再恐吓。
 
-通常人们在算命时都希望听到好话，所以术士常常会预言对方未来的运势会好转，子孙也会出人才。
+**通常人们在算命时都希望听到好话，所以术士常常会预言对方未来的运势会好转，子孙也会出人才。**
 
 当人们结伴前来时，可能存在作假或隐藏真实意图的情况，需特别小心。如果一个人在谈话中经常嘻笑或赞同，可能表明他没有太多的心机。
 
-如果一个人过分热情于算命，他未来一定没有好结果。如果一个人言辞傲慢，可能表明他最近运势不错，有恃无恐。
+**如果一个人过分热情于算命，他未来一定没有好结果。如果一个人言辞傲慢，可能表明他最近运势不错，有恃无恐。**
 
 ### 原文
 
-> 言不可多，言多必败。千不可极，千极必隆。
+> **言不可多，言多必败。千不可极，千极必隆。**
 > 
 > 父年高而母年细，定必偏生庶出。己年细妻年高，当然苟合私逃。子年与妻年仿佛，非填房定偏室坐正。父年与己年相等，不是过继定螟蛉。
 > 
@@ -140,7 +198,9 @@
 
 ### 解析
 
-不要说得太多，说多了就可能会出错。不要说得太极端，不要绝对化，否则就会导致错误。言语的节制与心理学中的“自我监控”有关，涉及到个体如何管理自己在社交互动中的表现。在公共演讲和领导沟通中，通过精炼语言来提高信息的传达效率和影响力。
+**不要说得太多，说多了就可能会出错。恐吓时不要说得太极端，否则就要进行安抚。**
+
+言语的节制与心理学中的“自我监控”有关，涉及到个体如何管理自己在社交互动中的表现。在公共演讲和领导沟通中，通过精炼语言来提高信息的传达效率和影响力。
 
 如果父亲的年龄比母亲大很多，那么他们生的孩子很可能是偏房或庶出的。这是因为年龄差距大，往往意味着父亲可能有其他妻妾。如果自己的年龄比妻子小很多，那么他们的婚姻可能是私奔或苟合的。这是因为年龄差距大，往往意味着他们的婚姻可能没有得到家庭的认可。如果孩子的年龄和妻子的年龄差不多，那么妻子很可能不是填房（继室），而是偏房（妾室）。如果父亲的年龄和自己差不多，那么自己很可能不是亲生的，而是过继的或者螟蛉（义子）。
 
@@ -198,7 +258,7 @@
 
 ### 原文
 
-> 少年赞他寿长，老人许加福泽。
+> **少年赞他寿长，老人许加福泽。**
 > 
 > 恶人勿言恶，只许傍借而此，隆千齐下。善人当言善，反正而说福寿同施。
 > 
@@ -208,9 +268,9 @@
 
 ### 解析
 
-如果是年轻人，就赞美预测他寿命很长。如果是老年人，就答应他增加祝福和恩泽。
+**如果是年轻人，就赞美预测他寿命很长。如果是老年人，就答应他增加祝福和恩泽。**
 
-对于恶人，不应该直接表达他们的恶行，而应该采取委婉的方式，通过比喻或间接的方式来表达，这样可以避免直接的冲突和对抗，从而使得问题能够更好地解决。对于善良的人，应该直接赞美他们的善行，并预言他们将会得到幸福和长寿。
+对于恶人，不应该直接表达他们的恶行，而应该采取委婉的方式，通过比喻或间接的方式来表达，这样可以避免直接的冲突和对抗，从而使得问题能够更好地解决，对待恶人，要安抚和恐吓同时使用。对于善良的人，应该直接赞美他们的善行，并预言他们将会得到幸福和长寿。
 
 如果一个人在中年时期能够成功地发展自己的事业和家庭，说明他在经营和管理方面有着出色的能力。如果一个人在老年时可能会遇到困境，说明他失去了年轻时的机遇和运气。
 
@@ -230,25 +290,29 @@
 > 
 > 坐立顶正大，言语要庄严，军马不可尽出，声气定要相连。
 > 
-> 淡定吞吐，得意不宜再往。言词锋利、失之不可复言。
+> **淡定吞吐，得意不宜再往。言词锋利，失之不可复言。**
 > 
 > 声响视正君子相，目横语乱小人形。
 
 ### 解析
 
-对待心机不正的人，也应该用正直和义气来对待他们，这样做通常是稳妥的，不会出错。对待君子应该用诚实、谨慎、节俭和谦让的态度，无论多少次都是如此。
+对待心机不正的人，也应该用正直和义气来恭维他们，这样做通常是稳妥的，不会出错。对待君子应该用诚实、谨慎、节俭和谦让的态度，无论多少次都是如此。
 
 当你得到了重要的信息时，不应完全透露出去，因为即使是真的信息中也可能包含虚假的成分。如果失去了重要的信息时最不应该立即去寻找，而应该留心观察，因为实际情况可能隐藏在表面之下。
 
 对待看似不重要的事物或人时，也应该用心去对待，不可显露出轻视或鄙视的心态。在做出激烈反应或行为时，应当谨慎，并且最好在确定方向之后再采取行动。
 
-在处理事情时，应该刚柔和软硬兼施，采用多种手段，这样就能达到既坚强有力又柔顺灵活的效果。
+"刚"代表坚定、果断的一面，意味着在原则问题上立场坚定，不轻易妥协；"柔"则代表灵活、包容，强调在方法和态度上可以适度妥协和变通。这种平衡的艺术，在很多情况下能更有效地解决问题和维持良好的人际关系。
 
-比喻对待传统文化和技艺应该既尊重又发扬光大，如同携带琴艺的祖宗一样，既有深厚的底蕴又能发出耀眼的光芒。
+"拷"和"夹"在这里比喻为从不同角度或用多种方法同时进行。这可以理解为在面对复杂情况时，需要多管齐下，采取多种措施或策略，确保全面覆盖、不留死角。这种做法强调了灵活性和全面性的策略选择，以应对可能遇到的各种挑战。
 
-无论坐着还是站立，都应该保持端正的姿态；说话时应该庄严；不应将所有的力量都使出来，而是要有所保留；声音和气息应该保持连贯。
+既要有"千"恐吓，也要有"隆"安抚鼓励恭维，这是一种平衡的艺术。
 
-在表达观点时，应该保持冷静和稳定，不应该因为得意而过度表现。一旦说出了锋利的话语，如果造成了伤害或失误，就无法收回。
+祖先福泽深厚，留下大量财富或好的运势给后代。要赞赏或鼓励求测者，运势极好，名声显赫，影响力广泛，如同大火烧天，声响不绝。
+
+无论坐着还是站立，都应该保持端正的姿态；说话时应该庄严；将个人的资源、力量或策略比作军队，告诫不应将所有的力量都使出来，而是要有所保留；声音和气息应该保持连贯。
+
+**在表达观点时，应该保持冷静和稳定，不应该因为说中而得意忘形。使用的词语要锋利直击痛点，如果有失误说错，就不要再次提及。**
 
 一个人的声音和视线可以反映出他是否为君子。如果声音洪亮、视线坚定，那么他是君子的表现；如果目光游移、言语混乱，那么可能是小人的特征。
 
@@ -290,7 +354,7 @@
 
 ### 原文
 
-> 十六七之少女问男，春情己动，异性亦然。五六十之老翁问女，冬雪既降，同偶何嫌。
+> **十六七之少女问男，春情己动，异性亦然。五六十之老翁问女，冬雪既降，同偶何嫌。**
 > 
 > 因人情而谈世故，忖心理以顺开言。
 > 
@@ -298,11 +362,11 @@
 
 ### 解析
 
-十六七岁的年轻女子询问男子，暗示着青春期的少女对异性产生了好奇和兴趣，这是自然的生理和心理变化，如同春天万物复苏，情感萌动。这里用“春情己动”来比喻青春期的情感变化，说明这个年龄段的少女对异性有了感觉，这是人的自然本性。五六十岁的老年男子对女性的态度。冬雪既降，通常象征着年末，万物进入休眠状态，这里比喻老年期。尽管年纪大了，但老年男子对女性的兴趣依然存在，他们并不嫌弃伴侣，仍然希望有伴侣的陪伴和温暖，这同样反映了人的自然需求和情感。
+**十六七岁的年轻女子询问男子，暗示着青春期的少女对异性产生了好奇和兴趣，这是自然的生理和心理变化，如同春天万物复苏，情感萌动。这里用“春情己动”来比喻青春期的情感变化，说明这个年龄段的少女对异性有了感觉，这是人的自然本性。五六十岁的老年男子对女性的态度。冬雪既降，通常象征着年末，万物进入休眠状态，这里比喻老年期。尽管年纪大了，但老年男子对女性的兴趣依然存在，他们并不嫌弃伴侣，仍然希望有伴侣的陪伴和温暖，这同样反映了人的自然需求和情感。**
 
 在谈论人情世故时，需要考虑人的心理状态，顺应人的心理来进行沟通。忖，即思量、考虑。在与人交流时，要考虑对方的感受和心理状态，以便更好地开启话题，进行沟通。
 
-俏，可以理解为美好或俊俏，这里可能是指一个人的面部特征。硬鼻高头，是指一个人的鼻子坚硬且高挺，这在面相学中通常被认为是自信和有领导力的象征。千中带夹，可能是指这个人在众多人中仍能保持自己的独特性和坚定立场。
+“俏”指好看的女人，“硬鼻高头”指性格坚强、不易屈服、聪明、有远见的男人。既要恐吓，又要分析整理。
 
 ### 原文
 
@@ -310,15 +374,21 @@
 > 
 > 千他古运将来，使其惊心动魄，言语要真诚。
 > 
-> 若逢低首浅笑，隆中带打，不声则千。千而吐则可，不吐要逐路微拷。低语讲话，隆其苦尽甘来，使其扬眉喜气，言语要温柔。
+> **若逢低首浅笑，隆中带打，不声则千。千而吐则可，不吐要逐路微拷。**
+> 
+> **低语讲话，隆其苦尽甘来，使其扬眉喜气，言语要温柔。**
 
 ### 解析
 
-如果对方不接受你的意见，你可以尝试通过赞美或肯定对方来缓和气氛，以便更好地沟通。如果你通过赞美或肯定对方而使其开放并透露信息，那么沟通就可以顺利进行。如果对方不坦白，你可能需要采取更强硬的态度，甚至是大声呼喝，来迫使对方表态或行动。
+如果对方不接受你的意见，你可以尝试通过赞美或肯定对方来缓和气氛，以便更好地沟通。如果你通过赞美或肯定对方而使其开放并透露信息，那么沟通就可以顺利进行。
+
+如果对方不坦白，你可能需要采取更强硬的态度，甚至是大声呼喝，来迫使对方表态或行动。
 
 通过揭示可能的未来命运来引起对方的强烈情感反应，使其感到震惊。在这个过程中，你的言语必须真诚，以建立信任。
 
-如果对方表现出谦卑或害羞的态度，如低首浅笑，你可以继续赞美对方，同时也可能需要适当地施加压力或挑战，以引导对方透露更多信息。如果对方保持沉默，你可以通过预测或描述对方的未来来刺激对方。
+**当遇到对方低头微笑，显示出友好或谦逊的态度时，采取一种既温和又不失力度的策略。要展现出尊重和友好，又要暗含策略或轻微的压力。如果不动声色，则要恐吓，对方愿意开口分享信息就达到了目的了。如果对方依然保持沉默，就需要耐心地、一步步地探询或引导，如同审慎地敲击，寻找突破点。**
+
+**当遇到对方用轻柔低沉的声音说话，要恭维他经过努力和忍耐，美好的结果终将到来。目的是让对方感到安心，甚至因为你的言辞而展颜欢笑。在整个过程中，保持言语的温柔和关怀，以促进彼此间信任和亲近感的建立。**
 
 ### 原文
 
@@ -328,7 +398,7 @@
 > 
 > 我军马须从容，旁敲侧引。
 > 
-> 视同来而眨眼，恐非有意寻求。对自己作疏言，未必无心试探。
+> **视同来而眨眼，恐非有意寻求。对自己作疏言，未必无心试探。**
 > 
 > 非得真英，不可落军马。须防马失前蹄。
 
@@ -340,7 +410,7 @@
 
 在与顾客交流时应该保持从容不迫的态度，并通过间接的方式来引导对话，而不是直接提问。
 
-如果顾客在对话中眨眼或者显得心不在焉，可能并不是真心寻求帮助，或者他们可能会有意无意地通过一些看似不重要的话来试探相术士的能力。
+**如果顾客在对话中眨眼或者显得心不在焉，可能并不是真心寻求帮助，或者他们可能会有意无意地通过一些看似不重要的话来试探相术士的能力。**
 
 除非确信顾客是真心寻求帮助，否则相术士不应该轻易地给出具体的预测或建议（落军马）。相术士需要小心谨慎，以防自己在交流中失误，就像马匹在行进中失蹄一样。
 
@@ -368,15 +438,15 @@
 
 ### 解析
 
-相术实践中对易经等古籍的深入研读与运用，在进行相术占卜时，必须像官员审理案件一样，追根溯源，寻找最根本的线索和证据。需要层层深入，逐步探究问题的根本。占卜祸福的方法，就像登上一座高楼，需要从浅层逐步深入，从轻到重。概括讨论，不要说太细节。
+相术实践中对易经等古籍的深入研读与运用，在进行相术看相时，必须像官员审理案件一样，追根溯源，寻找最根本的线索和证据。需要层层深入，逐步探究问题的根本。看相祸福的方法，就像登上一座高楼，需要从浅层逐步深入，从轻到重。概括讨论，不要说太细节。
 
-在进行占卜时，首先应该关注个人的未来命运，然后占卜有关事业、前途等事项，次要关注的是家庭、住宅和健康问题。也应该将自身的情况和问题融入其中，以便做出更准确的判断。
+在进行看相时，首先应该关注个人的未来命运，然后看相有关事业、前途等事项，次要关注的是家庭、住宅和健康问题。也应该将自身的情况和问题融入其中，以便做出更准确的判断。
 
 ### 原文
 
 > 断自身之法，人生品行，一世好运丑运，可为议论。
 > 
-> 亦要在自身入脉，可能知得内里因由。
+> **亦要在自身入脉，可能知得内里因由。**
 > 
 > 大约之法，如行兵调将，务要随机应变，仔细留心，不能一概而论。
 > 
@@ -384,13 +454,13 @@
 
 ### 解析
 
-占卜个人命运的方法，需要考虑行为和品德，好运和坏运。在进行占卜时，
+这里“断”可以理解为审视、判断或修正，意味着对自己的行为、思想和生活方式进行深刻的自我反省和调整。"自身之法"指的是个人的生活原则、行为模式及处事之道。因此，这句强调了自我反省的重要性，即每个人都应该不断地审视自己的行为和思想，以求不断进步和完善。指的是个人在一生中展现出来的道德品质和行为习惯。这不仅包括诚实、善良、责任感等正面品质，也涵盖了如何对待他人、如何面对困难和挑战的态度。良好的人生品行是个人声誉和社会评价的重要基础，也是内心平和与幸福感的来源。人生的道路上充满了起伏变化，有顺境（好运）也有逆境（丑运）。这句话鼓励人们应当以开放和理性的心态去讨论和反思这些经历，不论是好是坏。通过分享和探讨个人经历中的得与失、成与败，不仅可以从中吸取教训，提升自我，同时也能启发他人，增进相互之间的理解和共鸣。这种议论不仅是对个人生活经验的总结，也是对生命意义和价值探索的一部分。
 
-也需要深入个人的内在，了解其内在的原因和动机。
+**也需要把自己代入对方的处境，就可以了解其内在的原因和动机。**
 
-大致的占卜方法或原则，像指挥军队一样，根据不同的信息灵活变化，非常细心，观察入微，不能对所有情况都采取相同的处理方式，需要具体问题具体分析。
+大致的看相方法或原则，像指挥军队一样，根据不同的信息灵活变化，非常细心，观察入微，不能对所有情况都采取相同的处理方式，需要具体问题具体分析。
 
-占卜的过程中会遇到无限的变化，没有固定的模式，需要不断适应新的情况。
+看相的过程中会遇到无限的变化，没有固定的模式，需要不断适应新的情况。
 
 ### 原文
 
@@ -420,7 +490,7 @@
 
 在社会变迁和个人命运中，需要考虑到性别因素。
 
-男性最关心的问题通常是生意、工作或者财富的追求。女性询问者最关心的问题可能是婚姻、家庭或者个人的情感状态。“八复”在这里可能是指八卦中的复卦，代表重复或者回归，而“飞”可能是指变化或者不稳定。整体来说，这可能意味着女性询问者担心的事情可能会重复出现或者发生变化。
+男性最关心的问题通常是生意、工作或者财富的追求。女性询问者最关心的问题可能是婚姻、家庭或者个人的情感状态。“八复飞”直至外出征战或生意的丈夫能否平安归来。
 
 必须要将问题逐一理清楚，不能含糊其辞或者混淆不清。涉及到有关生意或工作，或是行军打仗，在处理这些信息时必须要保持冷静镇定。
 
@@ -438,15 +508,15 @@
 
 ### 解析
 
-贪婪的人往往会表现出贪婪的行为，有道德修养的人需要将贪婪视为严重的道德禁忌，时刻警惕和避免。佛教也把贪婪看作五大戒律中最为重要的一项，从事占卜或其他职业的人如果因为贪婪而犯错，责任在于个人的行为，而不在于职业本身。
+贪婪的人往往会表现出贪婪的行为，有道德修养的人需要将贪婪视为严重的道德禁忌，时刻警惕和避免。佛教也把贪婪看作五大戒律中最为重要的一项，从事看相或其他职业的人如果因为贪婪而犯错，责任在于个人的行为，而不在于职业本身。
 
 贪婪的官员对民众来说是像盗贼一样的人，因为他们利用职权非法获取财富，损害民众的利益。贪婪的商人对民众来说是像盗取民众钱财的口袋一样，通过不正当手段榨取民众的财富。利用自己的力量和地位欺压民众的人，他们将像虎狼一样对民众构成威胁。
 
 他们利用知识欺骗无知者，依靠力量欺负弱者，欺骗孤儿寡母，以及算计他人的财产，这些行为都被视为获取不义之财的方式。
 
-通过不正当手段获得的财富是不会长久享受的，不仅会给自己带来坏处，还可能影响后代。
+通过不正当手段获得的财富是不会长久享受的，就算没有自己遭报应，还可能影响后代遭报应。
 
-不义之财是人人都可以夺取的，因此从事不正当行业的人。并不是不值得称道或者不是真正的智者，他们最终会遭到上天的惩罚。
+那些通过不正当途径获得的财物，理论上讲任何人都有可能去占有或夺取。"做阿宝"通常指的是从事诈骗、行骗的行为，那些从事欺诈获取财物的人，并不是真正的诡计"千"，而是通过不道德的方式。这里强调的是欺诈行为的本质是不正义的，即便表面看似巧妙，实则缺乏正直和道德基础。希望上天或自然法则能够对这些不义行为进行惩罚。
 
 ### 原文
 
@@ -454,41 +524,41 @@
 > 
 > 未算其利，先防其弊，未置梗媒，先放生媒。
 > 
-> 故善为相者，取之不竭其力，不伤其根，上顺天理，下怏人心，并使之有所畏怯而不敢言。
+> **故善为相者，取之不竭其力，不伤其根，上顺天理，下怏人心，并使之有所畏怯而不敢言。**
 > 
 > 不善相者，竭一之力，伤之一内，取非不义之财，上违天理，下招人怨，非吾徒也，小子鸣鼓而攻之可也！
 
 ### 解析
 
-占卜师在提供服务时应该全面地观察和了解情况，并且在整个占卜过程中，从开始到结束，都需要保持谨慎的态度。博观而取之强调了在决策过程中需要广泛收集信息，这与心理学中的“信息加工”理论相符，即在做出选择前要综合考虑各种信息。在企业管理和战略规划中，通过综合分析市场信息、竞争对手和自身优势来制定发展策略。
+看相师在提供服务时应该全面地观察和了解情况，并且在整个看相过程中，从开始到结束，都需要保持谨慎的态度。博观而取之强调了在决策过程中需要广泛收集信息，这与心理学中的“信息加工”理论相符，即在做出选择前要综合考虑各种信息。在企业管理和战略规划中，通过综合分析市场信息、竞争对手和自身优势来制定发展策略。
 
-在考虑占卜可能带来的好处之前，首先要防止可能出现的害处。在采取行动之前，先释放积极的信号或信息，以避免误解或冲突。
+在考虑看相可能带来的好处利益之前，首先要防止可能出现的害处。"梗媒"和"生媒"在这里可能是指婚姻中介或撮合者。在古代，媒妁之言是婚姻成立的重要环节，"梗媒"或许可以理解为在双方之间设置障碍、制造难题的中介，而"生媒"则可能是指那些积极促成好事、使双方关系顺利发展的媒人。因此，这句话的直接含义可能是说，在考虑或安排那些可能导致矛盾、阻碍的条件之前（未置梗媒），应该首先释放或启用那些能促进关系和谐、促使事情向好的方向发展的力量（先放生媒）。
 
-优秀的占卜师，在提供占卜服务时，不应该耗尽询问者的精力或损害其根本利益，应该遵循天道和人心的期望，应该让询问者对占卜结果保持敬畏，不敢轻率行事。
+**优秀的看相师，在提供看相服务时，不应该耗尽询问者的财力或损害其根本利益，应该遵循天道和人心的期望，应该让询问者对看相结果保持敬畏，不敢轻率行事。**
 
-不称职的占卜师，可能会耗尽询问者的资源或伤害其内心，通过不正当手段获取财富，他们的行为既违背了天道，也引起了人们的怨恨，不是真正的同行，他们应该受到公众的谴责和攻击。
+不称职的看相师，可能会耗尽询问者的钱财或伤害其内心，通过不正当手段获取财富，他们的行为既违背了天道，也引起了人们的怨恨，不是我的徒弟，可以敲锣打鼓般招摇肆意地去攻击那个”小子“。
 
 ### 原文
 
 > 凡一皆可札飞也。
 > 
-> 君子敬鬼神而远之，小人畏神鬼而陷之。
+> **君子敬鬼神而远之，小人畏神鬼而陷之。**
 > 
 > 或求妻财子禄，或畏疾病灾祸，非有所惧，即有所求，察其所惧，观其所求，而善用军马，则一无不唯命是从，故曰：“我求他，不能他求我。”
 
 ### 解析
 
-在占卜实践中，每一个细节都是重要的，都可以被记录和利用。
+只要是孤身一人来的客人，都可以成为“札飞”。这句话的意思是说，只要有人来找你，你就应该果断地看相诈骗。这与心理学中的“自发性”理论相符，即人们在面对突发状况时，会自动产生一种“自发性”的反应，即做出判断、做出行动。
 
-有道德修养的人会尊敬鬼神但保持距离，而没有道德修养的人会因为害怕鬼神而陷入迷信。
+**有道德修养的人会尊敬鬼神但保持距离，而没有道德修养的人会因为害怕鬼神而陷入迷信。**
 
-寻求婚姻、财富、子嗣、官禄，或者是因为害怕疾病和灾祸。不是有所害怕的事情，就是有所追求的目标，要仔细观察和询问，以了解客户的内心想法和需求。能够巧妙地运用这些工具和策略，客户就会对他们言听计从。占卜师通过了解和满足客户的需求来主导占卜过程，而不是被客户的需求所左右。
+寻求婚姻、财富、子嗣、官禄，或者是因为害怕疾病和灾祸。不是有所害怕的事情，就是有所追求的目标，要仔细观察和询问，以了解客户的内心想法和需求。能够巧妙地运用这些工具和策略，客户就会对他们言听计从。看相师通过了解和满足客户的需求来主导看相过程，而不是被客户的需求所左右。
 
 ### 原文
 
 > 札飞之术，贵在多方。
 > 
-> 幻其真耶，神化莫测，小验然后大响，众信而后大成，鬼神无凭，唯人是依。
+> **幻其真耶，神化莫测，小验然后大响，众信而后大成，鬼神无凭，唯人是依。**
 > 
 > 一犬吠形，百犬吠声。
 > 
@@ -500,9 +570,9 @@
 
 ### 解析
 
-占卜的技巧或方法，最重要在于能够从多个角度和方面来观察和处理问题。通过多角度观察和处理问题，与心理学中的“多维思考”和“创造性思维”相关，强调了在解决问题时需要创新和多角度的视野。在产品设计和创新过程中，采用多角度思考来发掘潜在的解决方案和满足用户需求。
+看相诈骗的技巧或方法，最重要在于能够从多个角度和方面来观察和处理问题。通过多角度观察和处理问题，与心理学中的“多维思考”和“创造性思维”相关，强调了在解决问题时需要创新和多角度的视野。在产品设计和创新过程中，采用多角度思考来发掘潜在的解决方案和满足用户需求。
 
-通过一些手段让占卜结果看起来既真实又带有一定的神秘色彩，创造出一种超自然的效果，使得占卜结果显得不可预测和神奇。通过一些小的、成功的占卜来逐渐建立大众的信任，然后才能取得更大的成功。尽管占卜涉及鬼神等超自然元素，但最终占卜的结果还是依赖于人的解释和行动。
+**通过一些手段让看相结果看起来既真实又带有一定的神秘色彩，创造出一种超自然的效果，使得看相结果显得不可预测和神奇。通过一些小的、成功的看相来逐渐建立大众的信任，然后才能取得更大的成功。尽管看相涉及鬼神等超自然元素，但最终看相的结果还是依赖于人的解释和行动。**
 
 当一只狗开始吠叫时，其他的狗也会跟着吠叫。这是一种从众心理，比喻人们在没有明确了解情况时，往往会盲目跟从他人。描述了从众心理，即个体在群体中容易受到他人行为的影响，这与心理学中的“社会影响”理论相符。在市场营销和广告策略中，利用社会认同和从众心理来增加产品或品牌的吸引力。
 
