🎉auto update by Gmeek action

--- a/backup/英耀篇.md
+++ b/backup/英耀篇.md
@@ -548,7 +548,7 @@
 
 ### 解析
 
-只要是孤身一人来的客人，都可以成为“札飞”。这句话的意思是说，只要有人来找你，你就应该果断地看相诈骗。这与心理学中的“自发性”理论相符，即人们在面对突发状况时，会自动产生一种“自发性”的反应，即做出判断、做出行动。
+只要确定了客人是普通人（一 小白），都可以成为“札飞”。这句话的意思是说，只要有普通人来找你，你就应该果断地看相诈骗。这与心理学中的“自发性”理论相符，即人们在面对突发状况时，会自动产生一种“自发性”的反应，即做出判断、做出行动。
 
 **有道德修养的人会尊敬鬼神但保持距离，而没有道德修养的人会因为害怕鬼神而陷入迷信。**
 
