🎉auto update by Gmeek action

--- a/backup/英耀篇.md
+++ b/backup/英耀篇.md
@@ -162,7 +162,7 @@
 > 
 > **人人后运好，个个子孙贤。**
 > 
-> 三五成群，须防有假。嘻呵成，必定无心。
+> 三五成群，须防有假。嘻呵成片，必定无心。
 > 
 > **来意殷勤，前运必非好景。言词高傲，近来必定佳途。**
 
@@ -178,7 +178,7 @@
 
 **通常人们在算命时都希望听到好话，所以术士常常会预言对方未来的运势会好转，子孙也会出人才。**
 
-当人们结伴前来时，可能存在作假或隐藏真实意图的情况，需特别小心。如果一个人在谈话中经常嘻笑或赞同，可能表明他没有太多的心机。
+当人们结伴前来时，可能存在作假或隐藏真实意图的情况，很可能是来找茬找事的，需特别小心。如果一群人嘻嘻哈哈有说有笑的来的，可能表明他没有太多的心机，是来被骗的。
 
 **如果一个人过分热情于算命，他未来一定没有好结果。如果一个人言辞傲慢，可能表明他最近运势不错，有恃无恐。**
 
@@ -192,7 +192,7 @@
 > 
 > 早娶妻之人，父业可卜。迟立室者，祖业凋零。
 > 
-> 当家早，父必先丧。当家迟，父命延长。
+> 当家早，父必非懒既丧。当家迟，父富命延长。
 > 
 > 少年问亲娘，有病在牙床。老父问娇儿，定必子孙稀。
 
@@ -208,7 +208,7 @@
 
 如果一个年轻人很早就结婚了，那么他的父亲很可能有很好的事业，因为他有能力早早就为他安排婚姻。如果一个年轻人很晚才结婚，那么他的祖业很可能已经凋零，因为他可能没有能力早早就为他安排婚姻。
 
-如果一个年轻人很早就当家了，那么他的父亲很可能已经去世，因为他需要早早地承担家庭的责任。如果一个年轻人很晚才当家，那么他的父亲很可能还健在，因为他不需要早早地承担家庭的责任。
+如果一个年轻人很早就当家了，那么他的父亲很可能懒堕或老实巴交或已经去世，因为他需要早早地承担家庭的责任。如果一个年轻人很晚才当家，那么他的父亲很可能还健在或很有钱，因为他不需要早早地承担家庭的责任。
 
 如果一个年轻人来问他的母亲的情况，那么他的母亲很可能有病在牙床，也就是牙齿有问题。如果一个老父亲来问他的儿子的情况，那么他的儿子很可能子孙稀少，也就是没有很多子女。
 
@@ -220,7 +220,7 @@
 > 
 > 年嫩志诚，千金可托之肖子。老来白霍，万事无成之鄙夫。
 > 
-> 男儿问娼女，此乃终日谈烟花之俗子。妇人问翁姑，其人固念病体忧愁之贤女。
+> **男儿问娼女，此乃终日谈烟花之俗子。妇人问翁姑，其人固念病体忧愁之贤女。**
 > 
 > 男人身配独锁匙，未断有室。妇人襟头常带乳，不是无儿。
 
@@ -232,15 +232,15 @@
 
 年龄小的人志向坚定、真诚可靠，值得信赖，可以把重要的任务托付给他。年纪大的人还一事无成，生活颓废，就会被认为是没有成就的、被人看不起。
 
-如果一个男人的问题与娼女有关，那么他可能是终日谈论烟花的俗子。如果一个女人的问题与公婆有关，那么她可能是关心家中的情况的贤女。
+**如果一个男人的问题与娼女有关，那么他可能是终日谈论烟花的俗子。纠结于肉体的欲望，置家庭事业不顾，没有责任感，就算当下经济条件好，也不会有好未来。如果一个女人的问题与公婆有关，那么她可能是关心家中的情况的贤女。把别人的健康挂念，是善良的人，不问事业可能没事业，不问医生可能经济受限，问看相师是想获得认可，讨好型人格。**
 
 男人身上带有唯一的钥匙，不能确定他有没有妻子。妇女在哺乳期或有育儿迹象，可以确定她有孩子。
 
 ### 原文
 
-> 气滞神枯，斯人现困境，谋事十谋九凶。色润声高，此子近处吉祥，十成九就。
+> 气滞神苦，斯人现居困境，十谋九凶。色润声高，此子近处吉祥，十成九就。
 > 
-> 入门两目流连，必多心而无专一。身摇浪定，定小相而带轻浮。
+> 两目流连，必多心而无专一。身摇浪定，定小相而带轻浮。
 > 
 > 衣服朴而洁，铜匙坠带，生意场中之能人，可卜权衡早创。履华而整，银圆满袋，游乐场上之浪子，当决家业将倾。
 > 
@@ -270,7 +270,7 @@
 
 **如果是年轻人，就赞美预测他寿命很长。如果是老年人，就答应他增加祝福和恩泽。**
 
-对于恶人，不应该直接表达他们的恶行，而应该采取委婉的方式，通过比喻或间接的方式来表达，这样可以避免直接的冲突和对抗，从而使得问题能够更好地解决，对待恶人，要安抚和恐吓同时使用。对于善良的人，应该直接赞美他们的善行，并预言他们将会得到幸福和长寿。
+对于恶人，不应该直接表达他们的恶行，而应该采取委婉的方式，通过比喻或间接的方式来表达，夸他强，把别人都比下去了，吹捧他能低调就成大业，这样可以避免直接的冲突和对抗，从而使得问题能够更好地解决，对待恶人，要安抚和恐吓同时使用。对于善良的人，应该直接赞美他们的善行，并预言他们将会得到幸福和长寿。
 
 如果一个人在中年时期能够成功地发展自己的事业和家庭，说明他在经营和管理方面有着出色的能力。如果一个人在老年时可能会遇到困境，说明他失去了年轻时的机遇和运气。
 
@@ -296,7 +296,7 @@
 
 ### 解析
 
-对待心机不正的人，也应该用正直和义气来恭维他们，这样做通常是稳妥的，不会出错。对待君子应该用诚实、谨慎、节俭和谦让的态度，无论多少次都是如此。
+对待心机不正的人，也应该用正直和义气来恭维他们，这样做通常是稳妥的，不会出错。对待君子应该夸赞他们诚实、谨慎、节俭和谦让，无论多少次都是如此。
 
 当你得到了重要的信息时，不应完全透露出去，因为即使是真的信息中也可能包含虚假的成分。如果失去了重要的信息时最不应该立即去寻找，而应该留心观察，因为实际情况可能隐藏在表面之下。
 
@@ -886,6 +886,3 @@
   - 企业社会责任：企业通过社会责任报告，展示其对社会的贡献。
   - 环境保护：通过政策和技术创新，促进环境的可持续性。
 
-## 总结
-
-《英耀篇》的智慧跨越了时间的界限，与现代心理学的理论和实践相结合，为我们在个人发展、社会交往、教育、领导、冲突解决、健康和社会责任等多个领域提供了深刻的洞见和实用的指导。通过这些原则和技巧的应用，我们不仅能够更好地理解自己和他人，还能够更有效地参与到社会和组织的建设与发展中，为实现个人与集体的和谐与进步做出贡献。
