🎉auto update by Gmeek action

--- a/backup/英耀篇.md
+++ b/backup/英耀篇.md
@@ -1,5 +1,19 @@
 ## 简介
 
+江湖四大秘本是中国传统文化中与江湖术数相关的四部经典文献，主要流传于民间相士、算命先生之间，用于揣摩人心、观察人情、行骗获利等目的。这四部秘本分别是《英耀篇》、《军马篇》、《扎飞篇》和《阿宝篇》，各自有着独特的主题和应用技巧。
+
+- 英耀篇：此秘本侧重于心理学的揣摩，教导如何通过观察人的言行举止、表情神态来判断其性格、情绪以及背后的故事。它强调的是对人性深刻的理解和利用，通过言语诱导和心理暗示来操控对方，使其信服。《英耀篇》可以说是研究人心、掌握人际交往艺术的高度总结。
+
+- 军马篇：这部秘本的内容涉及策略布局与形势判断，类似于古代兵法中的用兵之道。在江湖术士的语境中，“军马”可能比喻为如何在复杂的人际关系和社会环境中运用智慧，灵活应对各种情况，包括如何布置场面、营造氛围以及如何在不同的“战役”中取得优势。
+
+- 扎飞篇：《扎飞篇》则更倾向于神秘主义和仪式感，教授如何通过装神弄鬼、借助超自然的力量来影响他人。它包含了一系列利用人们对未知的恐惧或敬畏，通过表演性质的宗教或迷信活动来达到控制或欺骗的目的。这种手法通常包括所谓的“跳大神”、祈福驱邪等，以达到让信众相信并依赖术士的能力。
+
+- 阿宝篇：此秘本专注于欺诈技巧和手段，特别是通过设计精妙的骗局来骗取财物。《阿宝篇》传授的是一系列欺诈方案，比如虚构故事、扮演角色、制造紧急情况等，以吸引目标并诱使其自愿交出财物。这些技巧往往结合了心理学和社会工程学的原理，旨在利用人的贪婪、同情或其他弱点。
+
+总的来说，江湖四大秘本反映了中国古代社会中一种特殊的文化现象，它们不仅包含了对人性深刻洞察的心理战术，也有着丰富的民俗文化色彩和历史背景，虽然其中的许多技巧在现代社会被视为不道德甚至非法，但在历史上却对了解民间信仰、心理操纵和社会互动提供了有趣的视角。
+
+---
+
 《英耀赋》或《英耀篇》是中国古代江湖术士使用的一种相术口诀。这种相术不依赖于八字测算或风水观察，而是完全依靠观察者的眼力和对被观察者一举一动的细致观察。例如，通过言谈、神情、习惯动作等细节，相术士能够洞察对方的底细和事情背后隐藏的玄机。"英"在这里指的是神，"耀"指的是捉，因此"英耀"实际上是指捕捉和运用神髓，这是江湖术士看相的核心技巧。
 
 《英耀篇》的原文包含了许多关于如何通过观察和交流来判断一个人性格、命运和心意的具体指导。例如，它教导术士在与人交谈时要注意对方的言辞和态度，如何通过对方的言行来推测其性格和近期的运势等。
