--- a/backup/英耀篇.md
+++ b/backup/英耀篇.md
@@ -1,4 +1,4 @@
-## 简介
+# 简介
 
 江湖四大秘本是中国传统文化中与江湖术数相关的四部经典文献，主要流传于民间相士、算命先生之间，用于揣摩人心、观察人情、行骗获利等目的。这四部秘本分别是《英耀篇》、《军马篇》、《扎飞篇》和《阿宝篇》，各自有着独特的主题和应用技巧。
 
@@ -13,6 +13,8 @@
 总的来说，江湖四大秘本反映了中国古代社会中一种特殊的文化现象，它们不仅包含了对人性深刻洞察的心理战术，也有着丰富的民俗文化色彩和历史背景，虽然其中的许多技巧在现代社会被视为不道德甚至非法，但在历史上却对了解民间信仰、心理操纵和社会互动提供了有趣的视角。
 
 ---
+
+# 一、英耀篇
 
 《英耀赋》或《英耀篇》是中国古代江湖术士使用的一种相术口诀。这种相术不依赖于八字测算或风水观察，而是完全依靠观察者的眼力和对被观察者一举一动的细致观察。例如，通过言谈、神情、习惯动作等细节，相术士能够洞察对方的底细和事情背后隐藏的玄机。"英"在这里指的是神，"耀"指的是捉，因此"英耀"实际上是指捕捉和运用神髓，这是江湖术士看相的核心技巧。
 
@@ -44,7 +46,7 @@
 > 
 > 士子问前程，生孙为近古。
 > 
-> 叠叠问此件，定然此件缺，频频问原因，其中定有因。
+> **叠叠问此件，定然此件缺，频频问原因，其中定有因。**
 > 
 > 一片真诚，自说慕名求教，此人乃是一哥，笑问看我贱相如何？此人若非火底，即是畜生。
 
@@ -60,7 +62,7 @@
 
 读书人来问命算卦，多半是为了功名前程，希望有飞黄腾达之日，光宗耀祖之时；商人来问卜，则因为近来生意不好的缘故。
 
-如果对方反复询问某件事情，说明在这件事情上他/她有所缺失或不满意；如果对方不断追问原因，说明他/她内心深处有困扰。
+**如果对方反复询问某件事情，说明在这件事情上他/她有所缺失或不满意；如果对方不断追问原因，说明他/她内心深处有困扰。**
 
 如果对方表现出真诚的态度，称自己是慕名前来求教，那么这个人可能是信神信命信卦的“一哥”——即虔诚的问卜求卦者；如果他/她笑着询问自己的面相如何，那么他/她可能是一个性格直率的人；如果态度恶劣，那么他/她可能是一个性格暴躁的人。
 
@@ -68,13 +70,13 @@
 
 > 砂砾丛中辨金石，衣冠队内别鱼龙。
 > 
-> 僧道纵清高不忘利欲，庙廊之士志在山林。
+> 僧道纵清，不忘利欲，庙廊达士，志在山林。
 > 
-> **初贵者志极高超，久困者志无远大，聪明之子家业常寒，百拙之夫财终不匮。**
+> **初贵者志极高超，久困者志无远大，聪明之子，家业常寒，百拙之夫，财终不匮。**
 > 
 > 眉精眼锐，白手兴家之人，碌碌无能，终生工水之辈。
 > 
-> 破落户穷极不离鞋袜，初发家初起好炫金饰。
+> 破落户穷极不离鞋袜，新发家初起好炫金饰。
 > 
 > 神暗额光，不是孤孀亦弃妇，妖婆媚笑，倘非花底定宠姬。
 > 
@@ -84,7 +86,7 @@
 
 相士应该具备辨别真伪的能力，就像在砂砾中辨识金石一样，在人群中，要能区分谁是贤才谁是庸才。
 
-即使是出家人也可能有欲望，而那些看似有志于山林的人可能实际上志在庙堂。
+那些身居高位的达官贵人，统治阶级，别看嘴面上冠冕堂皇，一心为公，其实个个都很贪婪，希望爵禄更丰，希望以权谋私搞更多的钱而不被察觉。只有真正的开明之士，才有志于功成名就后归隐山林，清白退休。
 
 **初显贵的人志向通常很高，而长期受困的人则可能志向不远大。聪明人的家业可能并不富裕，而看似笨拙的人却可能财富不断。刚刚开始发家的人喜欢炫耀自己的财富，注重物质享受。个体在经历贫困后，一旦获得财富，可能会过度强调物质展示。心理学中的“补偿心理”和“社会认同”概念可以解释这种行为，即个体可能会通过物质展示来弥补过去的不足或寻求社会认同。**
 
@@ -102,25 +104,27 @@
 
 ### 原文
 
-> 面带笑容，而心神不定，家有祸争，招子闪烁，而故作安祥，祸发自身。
+> 面带愁容，而心神不定，家有祸争，招子闪烁，而故作安祥，祸发自身。
 > 
-> 好勇斗狠，多遭横祸。怯懦无能，常受人欺。
+> **好勇斗狠，多遭横祸。怯懦无能，常受人欺。**
 > 
 > 志大才疏，终生咄咄空抱恨。才偏性执，不遭大祸亦奇穷。
 > 
-> 治世重文学之臣，乱世发草莽英雄。通商大邑竞工商，穷乡僻壤争林田。
+> 治世重文学之臣，乱世发草莽英雄。
+> 
+> 通商大邑竞工商，穷乡僻壤争林田。
 
 ### 解析
 
-如果一个人表面上带着笑容，但眼神游移不定，可能是因为家中发生了争执或不幸。
+如果一个人面带愁容而又心神不定，恍恍惚惚，带神经质的，可能是因为家中发生了争执或不幸。
 
 如果一个人眼神闪烁，却故作镇定，可能是因为他/她自己遇到了麻烦。
 
 表面的情绪表达与内心状态的不一致，与心理学中的“情绪不协调”概念相符，可能涉及深层的情绪问题。在心理咨询中，帮助个体识别和处理内心的真实情绪，以改善心理健康。
 
-性格好斗、容易冲动的人，容易因为冲突而遭受意外的灾祸。
+**性格好斗、容易冲动的人，容易因为冲突而遭受意外的灾祸。**
 
-性格怯懦、缺乏能力的人，他们往往因为软弱而被人欺负。
+**性格怯懦、缺乏能力的人，他们往往因为软弱而被人欺负。**
 
 心理学认为，缺乏自信和自尊的人可能会散发出易受攻击的信号，从而吸引到那些喜欢操控和欺负他人的人。
 
@@ -132,7 +136,9 @@
 
 心理学认为，固执的性格可能会使人忽视适应环境和变通的重要性，导致生活陷入困境。
 
-在不同的时代，人们的价值和成就也不同。在和平时期，重视文学才能的官员更受欢迎；而在乱世，那些出身草莽的英雄人物则有机会崭露头角。在不同地方人们的生活方式和竞争内容。在商业发达的大城市，人们竞争的是工商业的成就；而在偏远的乡村，人们则可能为了土地和林业资源而争斗。
+在不同的时代，人们的价值和成就也不同。在和平时期，重视文学才能的官员更受欢迎；而在乱世，那些出身草莽的英雄人物则有机会崭露头角。
+
+在不同地方人们的生活方式和竞争内容。在商业发达的大城市，人们竞争的是工商业的成就；而在偏远的乡村，人们则可能为了土地和林业资源而争斗。
 
 ### 原文
 
@@ -144,7 +150,7 @@
 > 
 > **先千后隆，无往不利，有千无隆，帝寿之材，故曰无千不响，无隆不成。**
 > 
-> 学者可执其端，而理其绪，举一隅而知三隅，随机应变，鬼神莫测，分寸己定，任意纵横，慎重传人，不出帝寿，斯篇玩熟，定教四海扬名。
+> 学者可执其端，而理其绪，举一隅而知三隅，随机应变，鬼神莫测，分寸己定，任意纵横，慎重传人，师门不出帝寿，斯篇玩熟，定教四海扬名。
 
 ### 解析
 
@@ -160,9 +166,11 @@
 
 通过观察对方的行为，推测其内心的意图，通过了解对方的一方面，来推测其他方面。如果对方对某个话题有积极的反应，就应该趁机深入探讨，就像打蛇随棍上一样，顺着对方的反应进一步行动。如果对方对进一步的尝试没有反应，那么就应该改变策略，像拨开草丛寻找蛇一样，尝试不同的方法来引导对方。
 
-**先进行恐吓，然后安抚，这样做通常能够取得成功。如果只有恐吓没有安抚，那么对方可能会认为你是在胡闹。所以说，没有恐吓不要安抚，没有安抚就无法成功诈骗。**
+**先进行恐吓，然后安抚，这样做通常能够取得成功。如果只有恐吓没有安抚，那么对方可能会认为你是在胡闹，你就是个愚蠢之才。所以说，没有恐吓不要安抚，没有安抚就无法成功诈骗。**
 
-这句话鼓励学者们深入研究，掌握事物的本质，从一个角度出发，了解更全面的情况。调了灵活性和不可预测性在人际交往和策略应对中的重要性。在掌握了分寸之后，就可以在各种情境中自由应对。在选择传承人时要非常慎重，确保他们具有深思熟虑、稳健不冲动的品质。深入研究并熟练掌握这些策略，如果能够做到这一点，就能在全世界获得名声。
+这句话鼓励学者们深入研究，掌握事物的本质，从一个角度出发，了解更全面的情况。调了灵活性和不可预测性在人际交往和策略应对中的重要性。在掌握了分寸之后，就可以在各种情境中自由应对。在选择传承人时要非常慎重，确保他们具有深思熟虑、稳健不冲动的品质，这样师门才不会教出愚蠢的人。深入研究并熟练掌握这些策略，如果能够做到这一点，就能在全世界获得名声。
+
+---
 
 ### 原文
 
@@ -508,9 +516,536 @@
 
 必须要将问题逐一理清楚，不能含糊其辞或者混淆不清。涉及到有关生意或工作，或是行军打仗，在处理这些信息时必须要保持冷静镇定。
 
+---
+# 二、军马篇
+
+## 原文
+
 ### 原文
 
-> 贪者必贪，君子引为大戒，佛门亦为五戒之首，故做阿宝者的罪过，咎不在相而在一。
+> 只道浮云风送去，人间霹雳自空来。莫道小溪流水浅，须知滑石有惊人。
+> 
+> 莫谓途不堪走马，应防路滑失前蹄。马快当防平地石，舟忙宜慎水中矶。
+> 
+> 如火烧赤壁，曹孟德之惊魂。若兵用乌江，楚霸王之丧胆。
+> 
+> 只可静坐观风月，切勿临渊去钓鱼。周郎大破连环策，孔明台上借东风。
+> 
+> 花柳场中切勿往，好比狐狸听旨施邪术，断送成汤六百秋。
+> 
+> 漫江撒下钓和线，尤恐钓出是非来。
+> 
+> 花花世界春三月，草草人情又一秋。惟要且勤且守，切勿妄作妄为。
+> 
+> 四季谋来来多阻滞，乘船骑马实艰难。莫谓花开常鲜艳，犹恐风狂有败枝。
+> 
+> 时时谨慎，步步为营。好比夜静水寒鱼不饵，满船空载月明归。
+> 
+> 不贪无所欲，守耐自然荣。一阵狂风一阵雨，半生云雾半生烟。
+> 
+> 一夜风来急，草木尽低头。六畜近来生百相，一牛两尾少人闻。
+> 
+> 有所忧患，则不得免焉。高山流水少，狂风雨半天。月色虚心待，有一船军器上营藏。
+> 
+> 书中生困难攀食，水上游鱼易钓烹。紧陷坚牢地，须防足下浮。
+> 
+> 山下两轮明月现，目前运限具文星。有贵难为贵，求败不聚财。
+> 
+> 车心马角棋休下，虎口羊肠路莫行。江水澄清翻作赤，湖波荡漾变成红。
+> 
+> 汉高着滩水，光武逢滂沱之险。华容道上逢关羽，赤壁江中遇周郎。
+> 
+> 青天白日雷公响，惊动愁人夜不眠。一片白云天外望，数声啼鸟梦中惊。
+> 
+> 门前枯树倒，白鹤满天飞。江山水渺渺，暗石在其中。
+> 
+> 红血杜鹃啼不尽，绿杨莺燕语思亲。高堂冷落，萱草凄凉。
+> 
+> 靛房未有工师染，茅屋常多木色衣。椿枝已落，萱草犹荣。
+> 
+> 门前多喜庆，人事倍精神。日暖春光侵衣艳，风送花来朴鼻香。
+> 
+> 新月桂松梢，清风送好音。缓舒雁羽翼，轻举蝶精神。
+> 
+> 万里春光先报暖，一天秋月更增辉。天喜照临，宜伞室家。
+> 
+> 喜事从天降，桂子结成双。绍振祖宗之箕裘，开启后人之事业。
+> 
+> 方寸有天堪府迎，逢人无地不生春。一派水木皆佳景，重重锦上又添花。
+> 
+> 春夏精神爽，秋冬大吉昌。忽然果遂真奇遇，便是男儿得志时。
+> 
+> 花逢春暖枝枝秀，月到秋晴夜夜光。残花发蕊，月缺重圆。
+> 
+> 花开叶茂枝枝秀，嫩竹出林节节高。一番新气象，随遇尽亨通。
+> 
+> 云收月朗家家现，雨后花前朵朵香。风和竹坞添新笋，日暖兰阶长嫩芽。
+> 
+> 何只丁财并进，而且人物康宁。
+> 
+> 脱其荆棘，乃有真景而来。财源不竭，不但利禄盈庭。
+> 
+> 倘言麒麟再庆，换过一翻新世界。果然不兴旧时同。不但态罴入梦，而且大获绳头。
+> 
+> 昔日云移遮朗月，今朝雾散见青天。有喜色，所谋如愿。
+> 
+> 若遵孔孟之门，苦志芸窗。但习陶朱之术，富有大业。
+> 
+> 预卜鸿图大展之荣，财如春水朝朝至，喜似秋月夜夜光。
+> 
+> 一石打破青铜镜，月里嫦娥缺半边。不尽祥光来眼底，无穷佳景到身前。
+> 
+> 美中不足生狼狈，目到浮云空自嗟。莫言一事小，弄出大乾坤。
+> 
+> 满眼儿孙增福寿，一庭少长尽安宁。玉人语燕陪君枕，肖子三槐即汝家。
+> 
+> 笑语家声振，共聚一堂亲。蜀地未逢司马到，荆州已着卧龙谋。
+> 
+> 好风吃散浮云去，明月照通大地光。交情渭北三春树，生意江南二月花。
+> 
+> 壁玉珠还时转泰，云开雾散月重明。前途运去金成铁，今日时来铁化金。
+> 
+> 昨夜不知何处雨，今朝忽见满江湖。
+> 
+> 祸去福生，增尔一番新气象。时来运泰，相逢到处尽繁华。
+> 
+> 自古英雄，每多挫折。由来豪杰，偏受兴磨。
+> 
+> 一翻寒澈骨，怎得梅花喷鼻香。虽有名利畅地，还防苦海生波。
+> 
+> 宿云似幕难遮月，细雨如烟不损花。如昏衢得炬烛，若苦海忽遇慈航。
+> 
+> 得意须防失意，开眉又恐皱眉。马逢伯乐，剑遇张华。
+> 
+> 立志非常早，怀才惜未伸。花开遭两损，月色被云迷。
+> 
+> 秋月云开后，熏风雨过时。坎地番夷夏，崎岖恐扑颠。
+> 
+> 发意外之财源，添岁前之秀子。财如春柳发，喜若夏莲开。
+> 
+> 平地生荆棘，浅水起风波。无边美景频频至，不尽财源滚滚来。
+> 
+> 莫道三冬无雨落，须防六月有寒时。云散一天星斗现，风平四海波浪清。
+> 
+> 老梅生白玉，秋菊绽黄金。虽有名利畅地，还防霜雪相侵。
+> 
+> 纵有风霜犯，依然乐到好春。佳偶忽成怨偶，良缘反作孽缘。
+> 
+> 莫道喜中无拂意，还妨乐里有生愁。
+> 
+> 论双关 
+> 
+> 好比枯槁之木，纵逢春而不荣。茂盛之标，虽凌霜而不败。
+> 
+> 虽无意外心常泰，犹有胸中内带愁。满径好花人赞羡，一帘微雨客生愁。
+> 
+> 一枝花放门墙外，几处人思瓶里簪。范丹虽乃穿蕉异，一时运转展鸿基。
+> 
+> 相如昔日为司马，洪武当年去牧牛。子女双生曾报兆，锦鸡齐唱竟呈祥。
+> 
+> 竹影扫街尘不动，荧光烛地草难燃。一轮夜月圆还缺，几点晨星有若无。
+> 
+> 好去好来还好意，多财多宝亦多男。门前八卦蚊休入，户外三星我接来。
+> 
+> 浪静风和船不动，天晴月朗客优游。为人静处寻安乐，便是清闲一日仙。
+> 
+> 诸葛一生惟谨慎，吕端大事不胡涂。
+> 
+> 渐入佳境，如小溪流水，未得大展鸿图。财丁两遂，仍妨家运转衰。
+> 
+> 家运支持，将功补过，只可静而获福，勿纵闲以生嗔。贵人得力，仍妨服色而丁忧。
+> 
+> 太乙临运，应主熊罴入梦，宜慎破财为佳。一则以喜，一则以惧。
+> 
+> 纸花做出惊人目，好在无香在里头。财虽有而积聚无多。
+> 
+> 纵遇丁财而逢喜，难免神色以生悲。富贵草头露，繁华瓦上霜。
+> 
+> 虽有志于四方，依然未伸大志。挫折在前，安逸在后。挫折大，险阻于常。
+> 
+> 颇得贵人关照，仍然未得畅志从心。宛如枯木逢春，虽有滋生也不荣。
+> 
+> 只可顺风摇顺桨，莫来危马过危桥。守株待免为安稳，缘木求鱼枉用功。
+> 
+> 虽行贵人提拔，未许十分称怀。财之有进有退，事亦半喜半忧。
+> 
+> 得财诚恐失献身，生子还妨损子。应得桑麻女，当逢吉服穿。
+> 
+> 平途走马无关碍，顺水行舟有逆风。衣禄有余，起跌殊多。
+> 
+> 得不足以补失，喜庆能使亡忧。交脱之际，动作勿妄。
+> 
+> 莫道全无事，须防不测忧。
+> 
+> 论颂扬 
+> 
+> 如秦楼之月，未得常光。似走盘之珠，去留未定。
+> 
+> 虽得鸿图犹未展，难令如意遂君心。忽然平地一声雷，丁财两旺。
+> 
+> 只手创成银世界，双拳弄出锦乾坤。贵子连添，财利重重。
+> 
+> 喜气欣欣，财源迭迭。财丁两旺，百事堪宜。
+> 
+> 丁财如旱曲得雨，枯木逢春。生涯占大有，美利尽成事。
+> 
+> 万物看生新气象，百般从此得精神。好风吹送岩前桂，十里人间九里花。
+> 
+> 雨露细滋春草长，风云际会小阳春。有意裁花花不发，无心插柳柳成阴。
+> 
+> 吹开云里月，剔起暗中灯。用心机再谋世界，尽本事而得大财。
+> 
+> 运逢财气心先爽，月到中秋分外明。春至满园皆秀色，秋来无处不花香。
+> 
+> 东成西就般般合，内作外为事事亨。花红花绿花成锦，月清月白月光明。
+> 
+> 平安竹报全家庆，宝贵花开遍室春。振家声而宏骏业，逢巧遇而得其财。
+> 
+> 可秉大权恭大任，重重财气，禄位高升。秋到中天明月好，运到人间宝贵春。
+> 
+> 脱迷离而登大道，拔云雾而见青天。果能发奋振雄心，定卜如意获资财。
+> 
+> 海外经营多获利，前程发达在他邦。英雄得志扬名远，宝贵催人气象新。
+> 
+> 尽力推开沙与石，用心淘得玉兼金。时运就从今日发，百花俱是此间开。
+> 
+> 且看巨船出大海，锦帆无恙挂西风。财如秋水朝朝满，运比桃花日日红。
+> 
+> 扬扬喜庆如春至，滚滚财源似水流。名花得雨生艳色，满面红颜照画堂。
+> 
+> 人逢喜事精神爽，桦遇春风瑞气香。花逢春景千般艳，月到中秋分外光。
+> 
+> 小小经营成厚业，微微创置可兴隆。上苑奇花呈宝贵，庭前瑞草报平安。
+> 
+> 狂风吹散残云去，如雨稍晴红日升。千里江山千里锦，一翻雨至一翻新。
+> 
+> 财如江上之清风，喜似山间之明月。清风明月无人管，绿水青山任意游。
+> 
+> 利如晓日腾云去，财似清风送喜来。斯时幸有贤朗志，何怕南窗寄傲情。
+> 
+> 喜金银之满库，纳榖粟以盈仓。红日初升，阴霾已散。顺时而动，循序上进。
+> 
+> 心花怒放，未许称心。财喜并临，有喜有财。谨守成业，敏事慎言。
+> 
+> 免生烦恼，凿石生玉。淘沙见金，惠风和畅。大有年丰，小人道长。
+> 
+> 甜言勿听，见景生情。见机而作，慎勿强求。
+> 
+> 金鳞在手，得还妨走。有胜有败，得足偿失，无吝无誉。皓月当人，任意而为。
+> 
+> 忠而见疑，直而受谤。微风贬骨，冷雨侵肌。否极泰来，先否后亨，如日之升。
+> 
+> 大道生财，寿筳祥开。举家畅饮，三杯不少。风光月斋。雨散云收。
+> 
+> 三呼不返，一梦无回。月朗天清，花香月艳。乍暗乍明，一帆风顺。
+> 
+> 吐气扬眉，浮尽书散。多修厥德，福自天中。
+> 
+> 论老人 
+> 
+> 大器晚成休道晚，长江有水任鱼游。不特财源广聚，自然到老生光。
+> 
+> 言晚福，安稳如山。论财禄，长江似水。福寿绵长安乐处，丁财并进又康宁。
+> 
+> 晚福更高儿女肖，晚景又盛妻妾贤。花迎丽日高低放，气逐香风远近闻。
+> 
+> 退去灾殃无别意，展开心事有余宽。财来恰似南山火，一阵高时一阵红。
+> 
+> 过尽前途十八滩，任君随意挂高帆。高处绿杨堪策马，条条好路透长安。
+> 
+> 只宜再纳兰姬，子嗣定然有见。视南山之寿比，乐有嘉宾。
+> 
+> 贺北海之筹陈，欣多命子。无处无誉，层楼直上，到处皆亨。
+> 
+> 态罴许其入梦，璋兆宜男。又赋小星之庆。大谋九就皆如意。
+> 
+> 万紫千红气象新，老骥倘怀千里志，枯桐空抱五材清。
+> 
+> 论小孩 
+> 
+> 根深不怕，树大何愁。理幼而学，壮而行。如月初升，光朗可爱。少须藉椿萱之福，然而啾唧多端。
+> 
+> 亦可跨龙附凤。无荣无辱。以度时光。
+> 
+> 论命宫 
+> 
+> 命逢驿马，非为性静。
+> 
+> 嗟日落兮，灵椿早谢，歌月朗兮，萱草长荣，嗟椿树之悲，喜萱堂之水（指丧父）。
+> 
+> 父母应得延年，可喜萱并茂（指父母全）。
+> 
+> 堂露冷，叹椿树之早凋，萱草悲秋，得王孙而抱憾（指丧父母）。
+> 
+> 萱花先谢，椿树长年（指丧母）。
+> 
+> 纵使椿萓遐龄，定然要奉邻家香火，以免幼年啾唧。
+> 
+> 纵使椿萓遐龄，于雁行中，不免折翼（指兄弟不全）。
+> 
+> 虽高年之福荫，尤有小厄相惊，幼藉二亲之福，依然两暗三光。
+> 
+> 椿堂先叙，椿草长荣（指父死）。
+> 
+> 幼须前人之福。然而啾唧多端。正是南岭种梅北岭秀，纵然遇险保呈祥。
+> 
+> 先难后易，大耗守财。财轻义重，来固多，用亦不少。
+> 
+> 若问天伦，椿丧萱茂，论少年，不过镜花水月。
+> 
+> 到晚景福份齐大。必主刑伤早见。椿萱难耐老。
+> 
+> 论田宅宫 
+> 
+> 卜遗业之有限，自创置之丰隆。壮岁平常衣禄，晚年乐享田园。
+> 
+> 田宅带何星，能守能兴。他日田园广置，厦屋渠渠。堪为预上。
+> 
+> 祖荫有些余积，可以无饥。
+> 
+> 更不知他日良田万顷，饲宇维新。
+> 
+> 祖业虽然甚丰厚，少年自创必兴隆。
+> 
+> 论财帛宫 
+> 
+> 财帛值何星，自系挥金如土，义重如山。
+> 
+> 少得何星宿照度，异日必然财生大道，实藏兴焉。可创过万之世界。
+> 
+> 财帛值何凶星，早财难聚，如有何吉星同垣，异日定堪创业。自创更丰于上代。
+> 
+> 又须早岁勤劳，晚年必一番作用。少年未能如意，他年获利从心。
+> 
+> 财帛值天空，财多反复，喜得金匮同垣，他日定然创置。异日可卜季伦之富润屋也。
+> 
+> 惯取市缠之利，必然旺处生财。
+> 
+> 不作文章高手，定为市井班头。
+> 
+> 虽乃攀桂无缘，而许生财有道。黄卷无缘，勿以诗书求显达，经营有道，须从商贾觅生财。
+> 
+> 论迁移宫 
+> 
+> 出外何方，大利何方。不宜迁居。
+> 
+> 连日架薪，以金木生活为合。何吉星守垣，邮门遇贵。来往咸亨。
+> 
+> 但何同度，上落舟车，仍宜谨慎。
+> 
+> 一笔扫开云汉路，三秋直上广寒宫。
+> 
+> 论官禄宫 
+> 
+> 吉凶混杂，生平起跌殊多。衣禄有余，异日锦衣轻裘。而居富厚，乘肥马，而掌军权。
+> 
+> 犯何，诗书正路无缘。
+> 
+> 衣禄人间多有，勿向诗书争荣辱，宜从市井逞英雄。
+> 
+> 若敌手持七寸管，也应才冠六钩弓。
+> 
+> 名登龙虎榜，身列凤凰池。
+> 
+> 诗书难谋，武力定膺爵禄。
+> 
+> 何星缠扰，求利胜于求名。
+> 
+> 若市井营业，定卜生财有道，必获大利，面团团作富家翁。
+> 
+> 官阶远大，禄自丰饶，端木才能，亿屡中，陶朱事业，富堪求。
+> 
+> 欣际会，而荣登政界。逢巧遇，以立奇功。
+> 
+> 论福德宫 
+> 
+> 心有慈祥，安人济众。福份齐大，虽乃早岁勤劳，晚景安逸。
+> 
+> 论少年，不过镜花水月，到晚景，福禄五全。
+> 
+> 福自身修，德建自然名立。
+> 
+> 论疾厄宫 
+> 
+> 带何星星宿，宜戒牛太血毒物，以免不测之灾来。
+> 
+> 喜得何星，吉星照度，自是避凶化吉，履险如夷。
+> 
+> 带何星宿，勿入风月之场，勿贪意外之缘，生平宜谨慎，恐有意外之虞。
+> 
+> 防口舌之侵，疾恙不沾，无忧沉痀之苦，永无害及其身。
+> 
+> 可以逢凶化吉，转祸为祥，保无隐疾侵身。
+> 
+> 虽有小恙，亦无大碍。宜请金水字边先生医理。
+> 
+> 须防病从口入。
+> 
+> 论夫妻宫 
+> 
+> 孟光系贤妇，不读诗书识礼义。常存闻范识规模。喜官星透出，受得好夫。
+> 
+> 印临子位，食神显露，亦庆亨佳儿肖子之荣。
+> 
+> 持家有法，妇道精乖，上能和，不能睦。
+> 
+> 女命身弱，主性纯粹温柔，夫贤子旺。魁罡性格多聪慧，迭迭相逢掌大权。
+> 
+> 盖以女命以夫子为用，其杀为官混，到底有精神。
+> 
+> 在家尤利父母，出阁琴瑟调和。
+> 
+> 晚年安乐，自在优游，不用劳心，而衣粮自足，无须劳，而家道自成。
+> 
+> 金水司令而相生，火土乘时而相助，金水若相逢，必招美丽客。门庭吉，人物倍安宁。
+> 
+> 泪酒香腮，闺帏寂寞，独杀成权，人有权术，非凡本领。
+> 
+> 子女双生曾报兆，鬼鸡齐唱竟呈祥。
+> 
+> 齐妇含冤，孟姜长城之哭破，二人齐到东山坑，同看红日照东明。
+> 
+> 父母之丧，丧事不免，枭印夺食，难免花开花落之恨。
+> 
+> 未得枝枝挺秀，儿女之债，花果不一。
+> 
+> 女犯伤官格外嫌，带印煞重，须防夺子。合多定损贞名，女犯伤官福不真。
+> 
+> 无财无印守孤贫。如在有财兼有印，好为有衣有禄人。
+> 
+> 花开花落无常定，月缺月圆又一轮。
+> 
+> 乙木者，花果之木也，藤萝之缘，牡丹之形，依玉树而临风,附古木而生香。
+> 
+> 论子女宫 
+> 
+> 好花不结因连雨，玉镜无明为久尘。
+> 
+> 春至花无影，云深月不明。
+> 
+> 丹桂经霜成晚子，碧桃遭雨结花迟。
+> 
+> 久寒草不秀，雨久花未荣。
+> 
+> 桃花贪结子，只恐五更霜。
+> 
+> 难免卜商之苦，东败于齐。杨业大会沙滩，威风八面。
+> 
+> 石榴有子花应结，宝鸭与香烟怎生。
+> 
+> 一夕偷花人铲草，虹霓初现雨梢晴。
+> 
+> 论奴仆宫 
+> 
+> 遭何星，任用宜择人，方能得力，切勿尽心相托，以免因人而累已。
+> 
+> 有受主敬宾强之义，无强奴欺主之虞。
+> 
+> 必须济以因，临以威。怀恩畏威，自无反侧之虞。
+> 
+> 堂上一呼，堂下百诺，颐指气使之效，呼聚喝散之权。
+> 
+> 生平虽享，自代其劳，待婢如意，仆役从心，指挥如意。
+> 
+> 论兄弟宫 
+> 
+> 许昆仲而带何星宿，也无孙庞之意，亦无姜家大被同眠。
+> 
+> 连枝同气，鸿雁成群。
+> 
+> 何星拱照，应卜王氏三槐。
+> 
+> 所嫌何星，只论何家两凤。
+> 
+> 上得兄力，下得弟缘。
+> 
+> 伯牛之叹，亦有相求相应，关张之盟，算来如女如足。
+> 
+> 论父母宫 
+> 
+> 金木相朝，明珠出海，中岳有气，额广颧高，晚年好景，此为相之得宜，品行端方者也。
+> 
+> 五官端正，三停相配，眼有神，眉有彩，三才相对，六府均合。
+> 
+> 双眼睛有彩，双眉之色有气，是有贵子添生，乃有福之相。
+> 
+> 可惜金木相冲，故而先受折挫烦绪也。
+> 
+> 手相八卦不陷，三纹分明，终是有权，亨财帛丰厚也。
+> 
+> 为人纯厚，交游中，有春皓月之奇，谈笑间，有桃红柳缘之趣。
+> 
+> 性格英明，品行超群，心灵性敏，义气惯人，此君定是魁梧客。
+> 
+> 貌原非丑，其人当是小丈夫。
+> 
+> 人品忠直，无屈曲之心。貌如桃李之姿，心存慈悲之念。
+> 
+> 食神生财，定立一生之衣禄，米粮丰厚，可一生之衣褖无亏。
+> 
+> 官星得命，平生衣禄有余。
+> 
+> 元辰，本为人，宽洪布德，刚断英明，胸藏大志，作事超群。
+
+---
+
+# 三、扎飞篇（节选）
+
+## 原文 与 解析
+
+### 原文
+
+> 凡一皆可札飞也。
+> 
+> **君子敬鬼神而远之，小人畏神鬼而陷之。**
+> 
+> 或求妻财子禄，或畏疾病灾祸，非有所惧，即有所求，察其所惧，观其所求，而善用军马，则一无不唯命是从，故曰：“我求他，不能他求我。”
+
+### 解析
+
+只要确定了客人是普通人（一 小白），都可以成为“札飞”。这句话的意思是说，只要有普通人来找你，你就应该果断地看相诈骗。这与心理学中的“自发性”理论相符，即人们在面对突发状况时，会自动产生一种“自发性”的反应，即做出判断、做出行动。
+
+**有道德修养的人会尊敬鬼神但保持距离，而没有道德修养的人会因为害怕鬼神而陷入迷信。**
+
+寻求婚姻、财富、子嗣、官禄，或者是因为害怕疾病和灾祸。不是有所害怕的事情，就是有所追求的目标，要仔细观察和询问，以了解客户的内心想法和需求。能够巧妙地运用这些工具和策略，客户就会对他们言听计从。看相师通过了解和满足客户的需求来主导看相过程，而不是被客户的需求所左右。
+
+### 原文
+
+> 札飞之术，贵在多方。
+> 
+> **幻其真耶，神化莫测，小验然后大响，众信而后大成，鬼神无凭，唯人是依。**
+> 
+> 一犬吠形，百犬吠声。
+> 
+> 众口烁金，曾参杀人。
+> 
+> 虽明智之士亦所疑惑，何况一哉。
+> 
+> 善为相者，莫不善用甲媒，故曰：“无媒不响，无媒不成。”
+
+### 解析
+
+看相诈骗的技巧或方法，最重要在于能够从多个角度和方面来观察和处理问题。通过多角度观察和处理问题，与心理学中的“多维思考”和“创造性思维”相关，强调了在解决问题时需要创新和多角度的视野。在产品设计和创新过程中，采用多角度思考来发掘潜在的解决方案和满足用户需求。
+
+**通过一些手段让看相结果看起来既真实又带有一定的神秘色彩，创造出一种超自然的效果，使得看相结果显得不可预测和神奇。通过一些小的、成功的看相来逐渐建立大众的信任，然后才能取得更大的成功。尽管看相涉及鬼神等超自然元素，但最终看相的结果还是依赖于人的解释和行动。**
+
+当一只狗开始吠叫时，其他的狗也会跟着吠叫。这是一种从众心理，比喻人们在没有明确了解情况时，往往会盲目跟从他人。描述了从众心理，即个体在群体中容易受到他人行为的影响，这与心理学中的“社会影响”理论相符。在市场营销和广告策略中，利用社会认同和从众心理来增加产品或品牌的吸引力。
+
+众人的言论就像锋利的武器，可以杀人。这进一步强调了社会舆论和误解对个人名誉和生活的巨大影响。
+
+即使是明智的人也会对此感到困惑和疑惑，更何况普通人呢？这强调了在面对社会舆论和误解时，即使是智者也可能无法保持清醒的判断。这与心理学中的“认知失调”理论相符，即个体在面对与自己信念不一致的信息时可能会感到困惑。在危机管理和公关策略中，通过及时准确的信息传播来减少公众的认知失调和误解。
+
+善于相面术的人，没有不善于利用媒介的，所以说，如果没有媒介，就无法引起关注，也无法成功。这表明在处理事务时，适当的媒介和手段是至关重要的。强调了媒介在沟通和影响中的重要性，与心理学中的“传播效应”理论相符，即信息的传播和接受受到媒介特性的影响。在社交媒体和数字营销中，选择合适的平台和工具来有效传播信息，增强品牌影响力。
+
+---
+
+# 四、阿宝篇（节选）
+
+## 原文 与 解析
+
+### 原文
+
+> 贪者必贫，君子引为大戒，佛门亦为五戒之首，故做阿宝者的罪过，咎不在相而在一。
 > 
 > 贪官者，民贼也，好商者，民橐也，豪强者，民之虎狼也。
 > 
@@ -552,51 +1087,9 @@
 
 不称职的看相师，可能会耗尽询问者的钱财或伤害其内心，通过不正当手段获取财富，他们的行为既违背了天道，也引起了人们的怨恨，不是我的徒弟，可以敲锣打鼓般招摇肆意地去攻击那个”小子“。
 
-### 原文
+---
 
-> 凡一皆可札飞也。
-> 
-> **君子敬鬼神而远之，小人畏神鬼而陷之。**
-> 
-> 或求妻财子禄，或畏疾病灾祸，非有所惧，即有所求，察其所惧，观其所求，而善用军马，则一无不唯命是从，故曰：“我求他，不能他求我。”
-
-### 解析
-
-只要确定了客人是普通人（一 小白），都可以成为“札飞”。这句话的意思是说，只要有普通人来找你，你就应该果断地看相诈骗。这与心理学中的“自发性”理论相符，即人们在面对突发状况时，会自动产生一种“自发性”的反应，即做出判断、做出行动。
-
-**有道德修养的人会尊敬鬼神但保持距离，而没有道德修养的人会因为害怕鬼神而陷入迷信。**
-
-寻求婚姻、财富、子嗣、官禄，或者是因为害怕疾病和灾祸。不是有所害怕的事情，就是有所追求的目标，要仔细观察和询问，以了解客户的内心想法和需求。能够巧妙地运用这些工具和策略，客户就会对他们言听计从。看相师通过了解和满足客户的需求来主导看相过程，而不是被客户的需求所左右。
-
-### 原文
-
-> 札飞之术，贵在多方。
-> 
-> **幻其真耶，神化莫测，小验然后大响，众信而后大成，鬼神无凭，唯人是依。**
-> 
-> 一犬吠形，百犬吠声。
-> 
-> 众口烁金，曾参杀人。
-> 
-> 虽明智之士齐所疑惑，何况一哉。
-> 
-> 善为相者，莫不善用甲媒，故曰：“无媒不响，无媒不成。”
-
-### 解析
-
-看相诈骗的技巧或方法，最重要在于能够从多个角度和方面来观察和处理问题。通过多角度观察和处理问题，与心理学中的“多维思考”和“创造性思维”相关，强调了在解决问题时需要创新和多角度的视野。在产品设计和创新过程中，采用多角度思考来发掘潜在的解决方案和满足用户需求。
-
-**通过一些手段让看相结果看起来既真实又带有一定的神秘色彩，创造出一种超自然的效果，使得看相结果显得不可预测和神奇。通过一些小的、成功的看相来逐渐建立大众的信任，然后才能取得更大的成功。尽管看相涉及鬼神等超自然元素，但最终看相的结果还是依赖于人的解释和行动。**
-
-当一只狗开始吠叫时，其他的狗也会跟着吠叫。这是一种从众心理，比喻人们在没有明确了解情况时，往往会盲目跟从他人。描述了从众心理，即个体在群体中容易受到他人行为的影响，这与心理学中的“社会影响”理论相符。在市场营销和广告策略中，利用社会认同和从众心理来增加产品或品牌的吸引力。
-
-众人的言论就像锋利的武器，可以杀人。这进一步强调了社会舆论和误解对个人名誉和生活的巨大影响。
-
-即使是明智的人也会对此感到困惑和疑惑，更何况普通人呢？这强调了在面对社会舆论和误解时，即使是智者也可能无法保持清醒的判断。这与心理学中的“认知失调”理论相符，即个体在面对与自己信念不一致的信息时可能会感到困惑。在危机管理和公关策略中，通过及时准确的信息传播来减少公众的认知失调和误解。
-
-善于相面术的人，没有不善于利用媒介的，所以说，如果没有媒介，就无法引起关注，也无法成功。这表明在处理事务时，适当的媒介和手段是至关重要的。强调了媒介在沟通和影响中的重要性，与心理学中的“传播效应”理论相符，即信息的传播和接受受到媒介特性的影响。在社交媒体和数字营销中，选择合适的平台和工具来有效传播信息，增强品牌影响力。
-
-## 现代心理学解释 与 应用
+# 现代心理学解释 与 应用
 
 《英耀篇》的智慧跨越了时间的界限，与现代心理学的理论和实践相结合，为我们在个人发展、社会交往、教育、领导、冲突解决、健康和社会责任等多个领域提供了深刻的洞见和实用的指导。通过这些原则和技巧的应用，我们不仅能够更好地理解自己和他人，还能够更有效地参与到社会和组织的建设与发展中，为实现个人与集体的和谐与进步做出贡献。
 
@@ -899,4 +1392,3 @@
 - **现代应用**：
   - 企业社会责任：企业通过社会责任报告，展示其对社会的贡献。
   - 环境保护：通过政策和技术创新，促进环境的可持续性。
-
