🎉auto update by Gmeek action

--- a/backup/英耀篇.md
+++ b/backup/英耀篇.md
@@ -523,6 +523,8 @@
 
 ### 原文
 
+#### 论命运
+
 > 只道浮云风送去，人间霹雳自空来。莫道小溪流水浅，须知滑石有惊人。
 > 
 > 莫谓途不堪走马，应防路滑失前蹄。马快当防平地石，舟忙宜慎水中矶。
@@ -632,9 +634,9 @@
 > 纵有风霜犯，依然乐到好春。佳偶忽成怨偶，良缘反作孽缘。
 > 
 > 莫道喜中无拂意，还妨乐里有生愁。
-> 
-> 论双关 
-> 
+
+#### 论双关
+
 > 好比枯槁之木，纵逢春而不荣。茂盛之标，虽凌霜而不败。
 > 
 > 虽无意外心常泰，犹有胸中内带愁。满径好花人赞羡，一帘微雨客生愁。
@@ -676,9 +678,9 @@
 > 得不足以补失，喜庆能使亡忧。交脱之际，动作勿妄。
 > 
 > 莫道全无事，须防不测忧。
-> 
-> 论颂扬 
-> 
+
+#### 论颂扬
+
 > 如秦楼之月，未得常光。似走盘之珠，去留未定。
 > 
 > 虽得鸿图犹未展，难令如意遂君心。忽然平地一声雷，丁财两旺。
@@ -740,9 +742,9 @@
 > 三呼不返，一梦无回。月朗天清，花香月艳。乍暗乍明，一帆风顺。
 > 
 > 吐气扬眉，浮尽书散。多修厥德，福自天中。
-> 
-> 论老人 
-> 
+
+#### 论老人
+
 > 大器晚成休道晚，长江有水任鱼游。不特财源广聚，自然到老生光。
 > 
 > 言晚福，安稳如山。论财禄，长江似水。福寿绵长安乐处，丁财并进又康宁。
@@ -760,15 +762,15 @@
 > 态罴许其入梦，璋兆宜男。又赋小星之庆。大谋九就皆如意。
 > 
 > 万紫千红气象新，老骥倘怀千里志，枯桐空抱五材清。
-> 
-> 论小孩 
-> 
+
+#### 论小孩
+
 > 根深不怕，树大何愁。理幼而学，壮而行。如月初升，光朗可爱。少须藉椿萱之福，然而啾唧多端。
 > 
 > 亦可跨龙附凤。无荣无辱。以度时光。
-> 
-> 论命宫 
-> 
+
+#### 论命宫
+
 > 命逢驿马，非为性静。
 > 
 > 嗟日落兮，灵椿早谢，歌月朗兮，萱草长荣，嗟椿树之悲，喜萱堂之水（指丧父）。
@@ -794,9 +796,9 @@
 > 若问天伦，椿丧萱茂，论少年，不过镜花水月。
 > 
 > 到晚景福份齐大。必主刑伤早见。椿萱难耐老。
-> 
-> 论田宅宫 
-> 
+
+#### 论田宅宫
+
 > 卜遗业之有限，自创置之丰隆。壮岁平常衣禄，晚年乐享田园。
 > 
 > 田宅带何星，能守能兴。他日田园广置，厦屋渠渠。堪为预上。
@@ -806,9 +808,9 @@
 > 更不知他日良田万顷，饲宇维新。
 > 
 > 祖业虽然甚丰厚，少年自创必兴隆。
-> 
-> 论财帛宫 
-> 
+
+#### 论财帛宫 
+
 > 财帛值何星，自系挥金如土，义重如山。
 > 
 > 少得何星宿照度，异日必然财生大道，实藏兴焉。可创过万之世界。
@@ -824,9 +826,9 @@
 > 不作文章高手，定为市井班头。
 > 
 > 虽乃攀桂无缘，而许生财有道。黄卷无缘，勿以诗书求显达，经营有道，须从商贾觅生财。
-> 
-> 论迁移宫 
-> 
+
+#### 论迁移宫
+
 > 出外何方，大利何方。不宜迁居。
 > 
 > 连日架薪，以金木生活为合。何吉星守垣，邮门遇贵。来往咸亨。
@@ -834,9 +836,9 @@
 > 但何同度，上落舟车，仍宜谨慎。
 > 
 > 一笔扫开云汉路，三秋直上广寒宫。
-> 
-> 论官禄宫 
-> 
+
+#### 论官禄宫
+
 > 吉凶混杂，生平起跌殊多。衣禄有余，异日锦衣轻裘。而居富厚，乘肥马，而掌军权。
 > 
 > 犯何，诗书正路无缘。
@@ -856,17 +858,17 @@
 > 官阶远大，禄自丰饶，端木才能，亿屡中，陶朱事业，富堪求。
 > 
 > 欣际会，而荣登政界。逢巧遇，以立奇功。
-> 
-> 论福德宫 
-> 
+
+#### 论福德宫
+
 > 心有慈祥，安人济众。福份齐大，虽乃早岁勤劳，晚景安逸。
 > 
 > 论少年，不过镜花水月，到晚景，福禄五全。
 > 
 > 福自身修，德建自然名立。
-> 
-> 论疾厄宫 
-> 
+
+#### 论疾厄宫
+
 > 带何星星宿，宜戒牛太血毒物，以免不测之灾来。
 > 
 > 喜得何星，吉星照度，自是避凶化吉，履险如夷。
@@ -880,9 +882,9 @@
 > 虽有小恙，亦无大碍。宜请金水字边先生医理。
 > 
 > 须防病从口入。
-> 
-> 论夫妻宫 
-> 
+
+#### 论夫妻宫
+
 > 孟光系贤妇，不读诗书识礼义。常存闻范识规模。喜官星透出，受得好夫。
 > 
 > 印临子位，食神显露，亦庆亨佳儿肖子之荣。
@@ -916,9 +918,9 @@
 > 花开花落无常定，月缺月圆又一轮。
 > 
 > 乙木者，花果之木也，藤萝之缘，牡丹之形，依玉树而临风,附古木而生香。
-> 
-> 论子女宫 
-> 
+
+#### 论子女宫
+
 > 好花不结因连雨，玉镜无明为久尘。
 > 
 > 春至花无影，云深月不明。
@@ -934,9 +936,9 @@
 > 石榴有子花应结，宝鸭与香烟怎生。
 > 
 > 一夕偷花人铲草，虹霓初现雨梢晴。
-> 
-> 论奴仆宫 
-> 
+
+#### 论奴仆宫
+
 > 遭何星，任用宜择人，方能得力，切勿尽心相托，以免因人而累已。
 > 
 > 有受主敬宾强之义，无强奴欺主之虞。
@@ -946,9 +948,9 @@
 > 堂上一呼，堂下百诺，颐指气使之效，呼聚喝散之权。
 > 
 > 生平虽享，自代其劳，待婢如意，仆役从心，指挥如意。
-> 
-> 论兄弟宫 
-> 
+
+#### 论兄弟宫
+
 > 许昆仲而带何星宿，也无孙庞之意，亦无姜家大被同眠。
 > 
 > 连枝同气，鸿雁成群。
@@ -960,9 +962,9 @@
 > 上得兄力，下得弟缘。
 > 
 > 伯牛之叹，亦有相求相应，关张之盟，算来如女如足。
-> 
-> 论父母宫 
-> 
+
+#### 论父母宫
+
 > 金木相朝，明珠出海，中岳有气，额广颧高，晚年好景，此为相之得宜，品行端方者也。
 > 
 > 五官端正，三停相配，眼有神，眉有彩，三才相对，六府均合。
